--- a/stories/ar/0004_الماعز-و-الكلب-و-البقرة.html
+++ b/stories/ar/0004_الماعز-و-الكلب-و-البقرة.html
@@ -43,75 +43,75 @@
   <body>
 <div class='cover'><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/01.jpg" />
 
-<h1 dir="rtl" id="section">الماعز و الكلب و البقرة</h1>
+<h1 id="section">الماعز و الكلب و البقرة</h1>
 
 Fabian Wakholi<br>العربية</div><div class="pagebreak">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/02.jpg" /></p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/02.jpg" /></p>
 
-<p dir="rtl">الماعز و الكلب و البقرة كانوا أصدقاء جدا.
+<p>الماعز و الكلب و البقرة كانوا أصدقاء جدا.
 في أحد الأيام ذهبوا رحلة بسيارة أجرة.</p>
 
 <div class="pagenum">1</div>
-<p dir="rtl"></div><div class="pagebreak"></p>
+<p></div><div class="pagebreak"></p>
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/03.jpg" /></p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/03.jpg" /></p>
 
-<p dir="rtl">عندما وصلوا إلى نهاية الرحلة ،طلب منهم السائق أجرة رحلتهما.
+<p>عندما وصلوا إلى نهاية الرحلة ،طلب منهم السائق أجرة رحلتهما.
 دفعت البقرة ماعليها.</p>
 
 <div class="pagenum">2</div>
-<p dir="rtl"></div><div class="pagebreak"></p>
+<p></div><div class="pagebreak"></p>
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/04.jpg" /></p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/04.jpg" /></p>
 
-<p dir="rtl">دفع الكلب زيادة ،لأنه لم يكن يعرف المبلغ المطلوب.</p>
+<p>دفع الكلب زيادة ،لأنه لم يكن يعرف المبلغ المطلوب.</p>
 
 <div class="pagenum">3</div>
-<p dir="rtl"></div><div class="pagebreak"></p>
+<p></div><div class="pagebreak"></p>
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/05.jpg" /></p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/05.jpg" /></p>
 
-<p dir="rtl">بينما كان السائق يعطي الكلب باقي النقود ،هربت الماعز بعيدا.</p>
+<p>بينما كان السائق يعطي الكلب باقي النقود ،هربت الماعز بعيدا.</p>
 
 <div class="pagenum">4</div>
-<p dir="rtl"></div><div class="pagebreak"></p>
+<p></div><div class="pagebreak"></p>
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/06.jpg" /></p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/06.jpg" /></p>
 
-<p dir="rtl">غضب السائق جدا فتركهم ورحل بسيارته دون أن يعطي الكلب باقي نقوده.</p>
+<p>غضب السائق جدا فتركهم ورحل بسيارته دون أن يعطي الكلب باقي نقوده.</p>
 
 <div class="pagenum">5</div>
-<p dir="rtl"></div><div class="pagebreak"></p>
+<p></div><div class="pagebreak"></p>
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/07.jpg" /></p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/07.jpg" /></p>
 
-<p dir="rtl">لهذا السبب يركض الكلب،حتى اليوم أمام كل سيارة ،وينظر إليها نظرة سريعة
+<p>لهذا السبب يركض الكلب،حتى اليوم أمام كل سيارة ،وينظر إليها نظرة سريعة
 للبحث عن السائق الذي أخذ باقي النقود.</p>
 
 <div class="pagenum">6</div>
-<p dir="rtl"></div><div class="pagebreak"></p>
+<p></div><div class="pagebreak"></p>
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/08.jpg" /></p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/08.jpg" /></p>
 
-<p dir="rtl">أما الماعز فقد كانت تهرب عندما تسمع صوت أي سيارة
+<p>أما الماعز فقد كانت تهرب عندما تسمع صوت أي سيارة
 فهي تخاف أن يقبض عليها لأنها لم تدفع ما عليها من النقود.</p>
 
 <div class="pagenum">7</div>
-<p dir="rtl"></div><div class="pagebreak"></p>
+<p></div><div class="pagebreak"></p>
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/09.jpg" /></p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/09.jpg" /></p>
 
-<p dir="rtl">أما البقرة فهي لاتهتم عندما تأتي أي سيارة.
+<p>أما البقرة فهي لاتهتم عندما تأتي أي سيارة.
 وتأخذ كثل وقتها بعبور الشارع
 لأنها تعرف أنها دفعت كل ماعليها كاملا.</p>
 
 <div class="pagenum">8</div>
-<p dir="rtl"></div><div class="pagebreak"></p>
+<p></div><div class="pagebreak"></p>
 
-<p dir="rtl"><strong>Text:</strong> Fabian Wakholi<br /><strong>Illustrations:</strong> Marleen Visser<br /><strong>Translation:</strong> Heba Tesheh<br /><strong>Language:</strong> Arabic</p>
-<p dir="rtl">This story is brought to you by the <a href="https://global-asp.github.io/">Global African Storybook Project</a>, an effort to translate the stories of the <a href="http://africanstorybook.org/">African Storybook Project</a> into all the languages of the world.<p dir="rtl">You can view the original story on the ASP website <a href="http://my.africanstorybook.org/stories/goat-dog-and-cow">here</a>
-<p dir="rtl"><a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
+<p><strong>Text:</strong> Fabian Wakholi<br /><strong>Illustrations:</strong> Marleen Visser<br /><strong>Translation:</strong> Heba Tesheh<br /><strong>Language:</strong> Arabic</p>
+<p>This story is brought to you by the <a href="https://global-asp.github.io/">Global African Storybook Project</a>, an effort to translate the stories of the <a href="http://africanstorybook.org/">African Storybook Project</a> into all the languages of the world.<p>You can view the original story on the ASP website <a href="http://my.africanstorybook.org/stories/goat-dog-and-cow">here</a>
+<p><a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </p></p></p>
 
 
