--- a/stories/ar/0004_الماعز-و-الكلب-و-البقرة_slides.html
+++ b/stories/ar/0004_الماعز-و-الكلب-و-البقرة_slides.html
@@ -88,7 +88,7 @@
 <body>
 
 <section id="الماعز-و-الكلب-و-البقرة" class="slide level1">
-<h1 dir="rtl">الماعز و الكلب و البقرة</h1>
+<h1>الماعز و الكلب و البقرة</h1>
 <center>
 <img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/01.jpg" />
 </center>
@@ -96,8 +96,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/02.jpg" /></p>
-<p dir="rtl">الماعز و الكلب و البقرة كانوا أصدقاء جدا. في أحد الأيام ذهبوا رحلة بسيارة أجرة.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/02.jpg" /></p>
+<p>الماعز و الكلب و البقرة كانوا أصدقاء جدا. في أحد الأيام ذهبوا رحلة بسيارة أجرة.</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/03.jpg" /></p>
-<p dir="rtl">عندما وصلوا إلى نهاية الرحلة ،طلب منهم السائق أجرة رحلتهما. دفعت البقرة ماعليها.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/03.jpg" /></p>
+<p>عندما وصلوا إلى نهاية الرحلة ،طلب منهم السائق أجرة رحلتهما. دفعت البقرة ماعليها.</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/04.jpg" /></p>
-<p dir="rtl">دفع الكلب زيادة ،لأنه لم يكن يعرف المبلغ المطلوب.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/04.jpg" /></p>
+<p>دفع الكلب زيادة ،لأنه لم يكن يعرف المبلغ المطلوب.</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/05.jpg" /></p>
-<p dir="rtl">بينما كان السائق يعطي الكلب باقي النقود ،هربت الماعز بعيدا.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/05.jpg" /></p>
+<p>بينما كان السائق يعطي الكلب باقي النقود ،هربت الماعز بعيدا.</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +132,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/06.jpg" /></p>
-<p dir="rtl">غضب السائق جدا فتركهم ورحل بسيارته دون أن يعطي الكلب باقي نقوده.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/06.jpg" /></p>
+<p>غضب السائق جدا فتركهم ورحل بسيارته دون أن يعطي الكلب باقي نقوده.</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +141,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/07.jpg" /></p>
-<p dir="rtl">لهذا السبب يركض الكلب،حتى اليوم أمام كل سيارة ،وينظر إليها نظرة سريعة للبحث عن السائق الذي أخذ باقي النقود.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/07.jpg" /></p>
+<p>لهذا السبب يركض الكلب،حتى اليوم أمام كل سيارة ،وينظر إليها نظرة سريعة للبحث عن السائق الذي أخذ باقي النقود.</p>
 <center>
 <strong>6</strong>
 </center>
@@ -150,8 +150,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/08.jpg" /></p>
-<p dir="rtl">أما الماعز فقد كانت تهرب عندما تسمع صوت أي سيارة فهي تخاف أن يقبض عليها لأنها لم تدفع ما عليها من النقود.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/08.jpg" /></p>
+<p>أما الماعز فقد كانت تهرب عندما تسمع صوت أي سيارة فهي تخاف أن يقبض عليها لأنها لم تدفع ما عليها من النقود.</p>
 <center>
 <strong>7</strong>
 </center>
@@ -159,8 +159,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/09.jpg" /></p>
-<p dir="rtl">أما البقرة فهي لاتهتم عندما تأتي أي سيارة. وتأخذ كثل وقتها بعبور الشارع لأنها تعرف أنها دفعت كل ماعليها كاملا.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/09.jpg" /></p>
+<p>أما البقرة فهي لاتهتم عندما تأتي أي سيارة. وتأخذ كثل وقتها بعبور الشارع لأنها تعرف أنها دفعت كل ماعليها كاملا.</p>
 <center>
 <strong>8</strong>
 </center>
@@ -170,17 +170,17 @@
 
 <h2 id="الماعز-و-الكلب-و-البقرة-1">الماعز و الكلب و البقرة</h2>
 <strong>Text:</strong> Fabian Wakholi<br> <strong>Illustrations:</strong> Marleen Visser<br> <strong>Translation:</strong> Heba Tesheh<br> <strong>Language:</strong> Arabic<br>
-<p dir="rtl">
+<p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
-<p dir="rtl">
+<p>
 You can view the original story on the ASP website <a href='http://my.africanstorybook.org/stories/goat-dog-and-cow'>here</a>
-<p dir="rtl"><div class="license">
+<p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
 
-<p dir="rtl"><center><div class="license">
-<a rel="license" href="http://creativecommons.org/licenses/by/3.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/3.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0 Unported License</a>
-.</div></center>
+<p><center><div class="license">
+<a rel="license" href="http://creativecommons.org/licenses/by/3.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/3.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0 Unported License</a>.
+</div></center>
 
 
 </section>
