--- a/stories/ar/0027_القرار.html
+++ b/stories/ar/0027_القرار.html
@@ -43,127 +43,127 @@
   <body>
 <div class='cover'><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/01.jpg" />
 
-<h1 dir="rtl" id="section">القرار</h1>
+<h1 id="section">القرار</h1>
 
 Ursula Nafula<br>العربية</div><div class="pagebreak">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/02.jpg" /></p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/02.jpg" /></p>
 
-<p dir="rtl">كان لقريتي العديد من المشاكل.
+<p>كان لقريتي العديد من المشاكل.
 فنحن نقف صفا طويلا لنجلب الماء من صنبورواحد.</p>
 
 <div class="pagenum">1</div>
-<p dir="rtl"></div><div class="pagebreak"></p>
+<p></div><div class="pagebreak"></p>
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/03.jpg" /></p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/03.jpg" /></p>
 
-<p dir="rtl">و ننتظر المعونات من الأخرين.</p>
+<p>و ننتظر المعونات من الأخرين.</p>
 
 <div class="pagenum">2</div>
-<p dir="rtl"></div><div class="pagebreak"></p>
+<p></div><div class="pagebreak"></p>
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/04.jpg" /></p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/04.jpg" /></p>
 
-<p dir="rtl">و نقفل أبواب منازلنا باكرا خوفا من اللصوص.</p>
+<p>و نقفل أبواب منازلنا باكرا خوفا من اللصوص.</p>
 
 <div class="pagenum">3</div>
-<p dir="rtl"></div><div class="pagebreak"></p>
+<p></div><div class="pagebreak"></p>
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/05.jpg" /></p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/05.jpg" /></p>
 
-<p dir="rtl">ترك العديد من الأطفال المدرسة.</p>
+<p>ترك العديد من الأطفال المدرسة.</p>
 
 <div class="pagenum">4</div>
-<p dir="rtl"></div><div class="pagebreak"></p>
+<p></div><div class="pagebreak"></p>
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/06.jpg" /></p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/06.jpg" /></p>
 
-<p dir="rtl">والفتيات الصغيرات يعملن خادمات في القرى الأخرى.</p>
+<p>والفتيات الصغيرات يعملن خادمات في القرى الأخرى.</p>
 
 <div class="pagenum">5</div>
-<p dir="rtl"></div><div class="pagebreak"></p>
+<p></div><div class="pagebreak"></p>
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/07.jpg" /></p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/07.jpg" /></p>
 
-<p dir="rtl">يتسكع الصبية الصغار في جميع أنحاء القرية ، بينما يعمل الأخرون في مزارع الناس.</p>
+<p>يتسكع الصبية الصغار في جميع أنحاء القرية ، بينما يعمل الأخرون في مزارع الناس.</p>
 
 <div class="pagenum">6</div>
-<p dir="rtl"></div><div class="pagebreak"></p>
+<p></div><div class="pagebreak"></p>
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/08.jpg" /></p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/08.jpg" /></p>
 
-<p dir="rtl">عندما تهب الرياح تعلق مخلفات الأوراق على الأشجار والأسوار.</p>
+<p>عندما تهب الرياح تعلق مخلفات الأوراق على الأشجار والأسوار.</p>
 
 <div class="pagenum">7</div>
-<p dir="rtl"></div><div class="pagebreak"></p>
+<p></div><div class="pagebreak"></p>
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/09.jpg" /></p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/09.jpg" /></p>
 
-<p dir="rtl">يجرح الناس بالزجاج المكسورالمهمل.</p>
+<p>يجرح الناس بالزجاج المكسورالمهمل.</p>
 
 <div class="pagenum">8</div>
-<p dir="rtl"></div><div class="pagebreak"></p>
+<p></div><div class="pagebreak"></p>
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/10.jpg" /></p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/10.jpg" /></p>
 
-<p dir="rtl">وفي أحد الأيام جف الصنبور،وأصبحت أوعيتنا فارغة.</p>
+<p>وفي أحد الأيام جف الصنبور،وأصبحت أوعيتنا فارغة.</p>
 
 <div class="pagenum">9</div>
-<p dir="rtl"></div><div class="pagebreak"></p>
+<p></div><div class="pagebreak"></p>
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/11.jpg" /></p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/11.jpg" /></p>
 
-<p dir="rtl">دار أبي من منزل إلى منزل، ليدعوهم لاجتماع القرية.</p>
+<p>دار أبي من منزل إلى منزل، ليدعوهم لاجتماع القرية.</p>
 
 <div class="pagenum">10</div>
-<p dir="rtl"></div><div class="pagebreak"></p>
+<p></div><div class="pagebreak"></p>
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/12.jpg" /></p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/12.jpg" /></p>
 
-<p dir="rtl">اجتمع الناس تحت الشجرة الكبيرة و استمعوا.</p>
+<p>اجتمع الناس تحت الشجرة الكبيرة و استمعوا.</p>
 
 <div class="pagenum">11</div>
-<p dir="rtl"></div><div class="pagebreak"></p>
+<p></div><div class="pagebreak"></p>
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/13.jpg" /></p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/13.jpg" /></p>
 
-<p dir="rtl">وقف أبي و قال: نحن بحاجة لأن نعمل معا لحل المشكلة.</p>
+<p>وقف أبي و قال: نحن بحاجة لأن نعمل معا لحل المشكلة.</p>
 
 <div class="pagenum">12</div>
-<p dir="rtl"></div><div class="pagebreak"></p>
+<p></div><div class="pagebreak"></p>
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/14.jpg" /></p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/14.jpg" /></p>
 
-<p dir="rtl">صرخ جوما الطفل ذو الثماني سنوات: أنا استطيع أن أساعد بالتنظيف</p>
+<p>صرخ جوما الطفل ذو الثماني سنوات: أنا استطيع أن أساعد بالتنظيف</p>
 
 <div class="pagenum">13</div>
-<p dir="rtl"></div><div class="pagebreak"></p>
+<p></div><div class="pagebreak"></p>
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/15.jpg" /></p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/15.jpg" /></p>
 
-<p dir="rtl">قالت امرأة : النساء يستطعن الإنضمام إلي لزراعة المحصيل الغذائية.</p>
+<p>قالت امرأة : النساء يستطعن الإنضمام إلي لزراعة المحصيل الغذائية.</p>
 
 <div class="pagenum">14</div>
-<p dir="rtl"></div><div class="pagebreak"></p>
+<p></div><div class="pagebreak"></p>
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/16.jpg" /></p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/16.jpg" /></p>
 
-<p dir="rtl">وقف رجل آخر و قال:الرجال سيحفرون بئرا.</p>
+<p>وقف رجل آخر و قال:الرجال سيحفرون بئرا.</p>
 
 <div class="pagenum">15</div>
-<p dir="rtl"></div><div class="pagebreak"></p>
+<p></div><div class="pagebreak"></p>
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/17.jpg" /></p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/17.jpg" /></p>
 
-<p dir="rtl">صرخنا جميعا : يجب علينا تغير حياتنا
+<p>صرخنا جميعا : يجب علينا تغير حياتنا
 من اليوم سنعمل معا لحل مشاكلنا</p>
 
 <div class="pagenum">16</div>
-<p dir="rtl"></div><div class="pagebreak"></p>
+<p></div><div class="pagebreak"></p>
 
-<p dir="rtl"><strong>Text:</strong> Ursula Nafula<br /><strong>Illustrations:</strong> Vusi Malindi<br /><strong>Translation:</strong> Heba Tesheh<br /><strong>Language:</strong> Arabic</p>
-<p dir="rtl">This story is brought to you by the <a href="https://global-asp.github.io/">Global African Storybook Project</a>, an effort to translate the stories of the <a href="http://africanstorybook.org/">African Storybook Project</a> into all the languages of the world.<p dir="rtl">You can view the original story on the ASP website <a href="http://my.africanstorybook.org/stories/decision">here</a>
-<p dir="rtl"><a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
+<p><strong>Text:</strong> Ursula Nafula<br /><strong>Illustrations:</strong> Vusi Malindi<br /><strong>Translation:</strong> Heba Tesheh<br /><strong>Language:</strong> Arabic</p>
+<p>This story is brought to you by the <a href="https://global-asp.github.io/">Global African Storybook Project</a>, an effort to translate the stories of the <a href="http://africanstorybook.org/">African Storybook Project</a> into all the languages of the world.<p>You can view the original story on the ASP website <a href="http://my.africanstorybook.org/stories/decision">here</a>
+<p><a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </p></p></p>
 
 
