--- a/stories/ar/0027_القرار_slides.html
+++ b/stories/ar/0027_القرار_slides.html
@@ -88,7 +88,7 @@
 <body>
 
 <section id="القرار" class="slide level1">
-<h1 dir="rtl">القرار</h1>
+<h1>القرار</h1>
 <center>
 <img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/01.jpg" />
 </center>
@@ -96,8 +96,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/02.jpg" /></p>
-<p dir="rtl">كان لقريتي العديد من المشاكل. فنحن نقف صفا طويلا لنجلب الماء من صنبورواحد.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/02.jpg" /></p>
+<p>كان لقريتي العديد من المشاكل. فنحن نقف صفا طويلا لنجلب الماء من صنبورواحد.</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/03.jpg" /></p>
-<p dir="rtl">و ننتظر المعونات من الأخرين.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/03.jpg" /></p>
+<p>و ننتظر المعونات من الأخرين.</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/04.jpg" /></p>
-<p dir="rtl">و نقفل أبواب منازلنا باكرا خوفا من اللصوص.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/04.jpg" /></p>
+<p>و نقفل أبواب منازلنا باكرا خوفا من اللصوص.</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/05.jpg" /></p>
-<p dir="rtl">ترك العديد من الأطفال المدرسة.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/05.jpg" /></p>
+<p>ترك العديد من الأطفال المدرسة.</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +132,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/06.jpg" /></p>
-<p dir="rtl">والفتيات الصغيرات يعملن خادمات في القرى الأخرى.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/06.jpg" /></p>
+<p>والفتيات الصغيرات يعملن خادمات في القرى الأخرى.</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +141,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/07.jpg" /></p>
-<p dir="rtl">يتسكع الصبية الصغار في جميع أنحاء القرية ، بينما يعمل الأخرون في مزارع الناس.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/07.jpg" /></p>
+<p>يتسكع الصبية الصغار في جميع أنحاء القرية ، بينما يعمل الأخرون في مزارع الناس.</p>
 <center>
 <strong>6</strong>
 </center>
@@ -150,8 +150,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/08.jpg" /></p>
-<p dir="rtl">عندما تهب الرياح تعلق مخلفات الأوراق على الأشجار والأسوار.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/08.jpg" /></p>
+<p>عندما تهب الرياح تعلق مخلفات الأوراق على الأشجار والأسوار.</p>
 <center>
 <strong>7</strong>
 </center>
@@ -159,8 +159,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/09.jpg" /></p>
-<p dir="rtl">يجرح الناس بالزجاج المكسورالمهمل.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/09.jpg" /></p>
+<p>يجرح الناس بالزجاج المكسورالمهمل.</p>
 <center>
 <strong>8</strong>
 </center>
@@ -168,8 +168,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/10.jpg" /></p>
-<p dir="rtl">وفي أحد الأيام جف الصنبور،وأصبحت أوعيتنا فارغة.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/10.jpg" /></p>
+<p>وفي أحد الأيام جف الصنبور،وأصبحت أوعيتنا فارغة.</p>
 <center>
 <strong>9</strong>
 </center>
@@ -177,8 +177,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/11.jpg" /></p>
-<p dir="rtl">دار أبي من منزل إلى منزل، ليدعوهم لاجتماع القرية.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/11.jpg" /></p>
+<p>دار أبي من منزل إلى منزل، ليدعوهم لاجتماع القرية.</p>
 <center>
 <strong>10</strong>
 </center>
@@ -186,8 +186,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/12.jpg" /></p>
-<p dir="rtl">اجتمع الناس تحت الشجرة الكبيرة و استمعوا.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/12.jpg" /></p>
+<p>اجتمع الناس تحت الشجرة الكبيرة و استمعوا.</p>
 <center>
 <strong>11</strong>
 </center>
@@ -195,8 +195,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/13.jpg" /></p>
-<p dir="rtl">وقف أبي و قال: نحن بحاجة لأن نعمل معا لحل المشكلة.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/13.jpg" /></p>
+<p>وقف أبي و قال: نحن بحاجة لأن نعمل معا لحل المشكلة.</p>
 <center>
 <strong>12</strong>
 </center>
@@ -204,8 +204,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/14.jpg" /></p>
-<p dir="rtl">صرخ جوما الطفل ذو الثماني سنوات: أنا استطيع أن أساعد بالتنظيف</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/14.jpg" /></p>
+<p>صرخ جوما الطفل ذو الثماني سنوات: أنا استطيع أن أساعد بالتنظيف</p>
 <center>
 <strong>13</strong>
 </center>
@@ -213,8 +213,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/15.jpg" /></p>
-<p dir="rtl">قالت امرأة : النساء يستطعن الإنضمام إلي لزراعة المحصيل الغذائية.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/15.jpg" /></p>
+<p>قالت امرأة : النساء يستطعن الإنضمام إلي لزراعة المحصيل الغذائية.</p>
 <center>
 <strong>14</strong>
 </center>
@@ -222,8 +222,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/16.jpg" /></p>
-<p dir="rtl">وقف رجل آخر و قال:الرجال سيحفرون بئرا.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/16.jpg" /></p>
+<p>وقف رجل آخر و قال:الرجال سيحفرون بئرا.</p>
 <center>
 <strong>15</strong>
 </center>
@@ -231,8 +231,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/17.jpg" /></p>
-<p dir="rtl">صرخنا جميعا : يجب علينا تغير حياتنا من اليوم سنعمل معا لحل مشاكلنا</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/17.jpg" /></p>
+<p>صرخنا جميعا : يجب علينا تغير حياتنا من اليوم سنعمل معا لحل مشاكلنا</p>
 <center>
 <strong>16</strong>
 </center>
@@ -242,17 +242,17 @@
 
 <h2 id="القرار-1">القرار</h2>
 <strong>Text:</strong> Ursula Nafula<br> <strong>Illustrations:</strong> Vusi Malindi<br> <strong>Translation:</strong> Heba Tesheh<br> <strong>Language:</strong> Arabic<br>
-<p dir="rtl">
+<p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
-<p dir="rtl">
+<p>
 You can view the original story on the ASP website <a href='http://my.africanstorybook.org/stories/decision'>here</a>
-<p dir="rtl"><div class="license">
+<p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
 
-<p dir="rtl"><center><div class="license">
-<a rel="license" href="http://creativecommons.org/licenses/by/3.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/3.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0 Unported License</a>
-.</div></center>
+<p><center><div class="license">
+<a rel="license" href="http://creativecommons.org/licenses/by/3.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/3.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0 Unported License</a>.
+</div></center>
 
 
 </section>
