--- a/stories/ar/0120_الشعر.html
+++ b/stories/ar/0120_الشعر.html
@@ -43,69 +43,69 @@
   <body>
 <div class='cover'><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0120/01.jpg" />
 
-<h1 dir="rtl" id="section">الشعر</h1>
+<h1 id="section">الشعر</h1>
 
 Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br>العربية</div><div class="pagebreak">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0120/02.jpg" /></p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0120/02.jpg" /></p>
 
-<p dir="rtl">ثلي لديها شعر قصير</p>
+<p>ثلي لديها شعر قصير</p>
 
 <div class="pagenum">1</div>
-<p dir="rtl"></div><div class="pagebreak"></p>
+<p></div><div class="pagebreak"></p>
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0120/03.jpg" /></p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0120/03.jpg" /></p>
 
-<p dir="rtl">آنا لديها شعر طويل</p>
+<p>آنا لديها شعر طويل</p>
 
 <div class="pagenum">2</div>
-<p dir="rtl"></div><div class="pagebreak"></p>
+<p></div><div class="pagebreak"></p>
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0120/04.jpg" /></p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0120/04.jpg" /></p>
 
-<p dir="rtl">كاثي لديها أطول شعر</p>
+<p>كاثي لديها أطول شعر</p>
 
 <div class="pagenum">3</div>
-<p dir="rtl"></div><div class="pagebreak"></p>
+<p></div><div class="pagebreak"></p>
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0120/05.jpg" /></p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0120/05.jpg" /></p>
 
-<p dir="rtl">زاما جدلت شعرها</p>
+<p>زاما جدلت شعرها</p>
 
 <div class="pagenum">4</div>
-<p dir="rtl"></div><div class="pagebreak"></p>
+<p></div><div class="pagebreak"></p>
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0120/06.jpg" /></p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0120/06.jpg" /></p>
 
-<p dir="rtl">بابا لديه لحية</p>
+<p>بابا لديه لحية</p>
 
 <div class="pagenum">5</div>
-<p dir="rtl"></div><div class="pagebreak"></p>
+<p></div><div class="pagebreak"></p>
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0120/07.jpg" /></p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0120/07.jpg" /></p>
 
-<p dir="rtl">زانيلي مشطت شعرها</p>
+<p>زانيلي مشطت شعرها</p>
 
 <div class="pagenum">6</div>
-<p dir="rtl"></div><div class="pagebreak"></p>
+<p></div><div class="pagebreak"></p>
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0120/08.jpg" /></p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0120/08.jpg" /></p>
 
-<p dir="rtl">ثيبو قص شعره</p>
+<p>ثيبو قص شعره</p>
 
 <div class="pagenum">7</div>
-<p dir="rtl"></div><div class="pagebreak"></p>
+<p></div><div class="pagebreak"></p>
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0120/09.jpg" /></p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0120/09.jpg" /></p>
 
-<p dir="rtl">ثيمبا أزال شعره</p>
+<p>ثيمبا أزال شعره</p>
 
 <div class="pagenum">8</div>
-<p dir="rtl"></div><div class="pagebreak"></p>
+<p></div><div class="pagebreak"></p>
 
-<p dir="rtl"><strong>Text:</strong> Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br /><strong>Illustrations:</strong> Bronwen Heath<br /><strong>Translation:</strong> Heba Tesheh<br /><strong>Language:</strong> Arabic</p>
-<p dir="rtl">This story is brought to you by the <a href="https://global-asp.github.io/">Global African Storybook Project</a>, an effort to translate the stories of the <a href="http://africanstorybook.org/">African Storybook Project</a> into all the languages of the world.<p dir="rtl">You can view the original story on the ASP website <a href="http://my.africanstorybook.org/stories/hair">here</a>
-<p dir="rtl"><a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
+<p><strong>Text:</strong> Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br /><strong>Illustrations:</strong> Bronwen Heath<br /><strong>Translation:</strong> Heba Tesheh<br /><strong>Language:</strong> Arabic</p>
+<p>This story is brought to you by the <a href="https://global-asp.github.io/">Global African Storybook Project</a>, an effort to translate the stories of the <a href="http://africanstorybook.org/">African Storybook Project</a> into all the languages of the world.<p>You can view the original story on the ASP website <a href="http://my.africanstorybook.org/stories/hair">here</a>
+<p><a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </p></p></p>
 
 
