--- a/stories/ar/0234_أنديسوا-نجمة-كرة-القدم.html
+++ b/stories/ar/0234_أنديسوا-نجمة-كرة-القدم.html
@@ -43,78 +43,78 @@
   <body>
 <div class='cover'><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0234/01.jpg" />
 
-<h1 dir="rtl" id="section">أنديسوا نجمة كرة القدم</h1>
+<h1 id="section">أنديسوا نجمة كرة القدم</h1>
 
 Eden Daniels<br>العربية</div><div class="pagebreak">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0234/02.jpg" /></p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0234/02.jpg" /></p>
 
-<p dir="rtl">شاهدت أنديسوا الصبية يلعبون كرة القدم
+<p>شاهدت أنديسوا الصبية يلعبون كرة القدم
 كانت تتمنى لو أنها تستطيع أن تنضم إليهم
 فسألت المدرب إن كانت تستطيع أن تدرب معهم</p>
 
 <div class="pagenum">1</div>
-<p dir="rtl"></div><div class="pagebreak"></p>
+<p></div><div class="pagebreak"></p>
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0234/03.jpg" /></p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0234/03.jpg" /></p>
 
-<p dir="rtl">أجابها المدرب : في هذه المدرسة لا يسمح إلا للصبية أن يلعبوا كرة القدم</p>
+<p>أجابها المدرب : في هذه المدرسة لا يسمح إلا للصبية أن يلعبوا كرة القدم</p>
 
 <div class="pagenum">2</div>
-<p dir="rtl"></div><div class="pagebreak"></p>
+<p></div><div class="pagebreak"></p>
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0234/04.jpg" /></p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0234/04.jpg" /></p>
 
-<p dir="rtl">قال الصبية لها: العبي كرة الشبكة
+<p>قال الصبية لها: العبي كرة الشبكة
 كرة الشبكة للبنات،وكرة القدم للصبيان</p>
 
 <div class="pagenum">3</div>
-<p dir="rtl"></div><div class="pagebreak"></p>
+<p></div><div class="pagebreak"></p>
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0234/05.jpg" /></p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0234/05.jpg" /></p>
 
-<p dir="rtl">في اليوم التالي أقيم في المدرسة مبارة كبيرة لكرة القدم
+<p>في اليوم التالي أقيم في المدرسة مبارة كبيرة لكرة القدم
 كان المدرب قلقا ،لأن أفضل لاعب عنده كان مريضا ، ولا يستطيع اللعب</p>
 
 <div class="pagenum">4</div>
-<p dir="rtl"></div><div class="pagebreak"></p>
+<p></div><div class="pagebreak"></p>
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0234/06.jpg" /></p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0234/06.jpg" /></p>
 
-<p dir="rtl">ركضت أنديسوا وترجته أن يدعها تلعب
+<p>ركضت أنديسوا وترجته أن يدعها تلعب
 لم يكن المدرب وثقا مما عليه فعله
 بعد ذلك قرر أن يسمح لها بالانضمام إلى الفريق</p>
 
 <div class="pagenum">5</div>
-<p dir="rtl"></div><div class="pagebreak"></p>
+<p></div><div class="pagebreak"></p>
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0234/07.jpg" /></p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0234/07.jpg" /></p>
 
-<p dir="rtl">المبارة كانت صعبة جدا
+<p>المبارة كانت صعبة جدا
 أصبحت في منتصفها، ولم يدخل أي هدف</p>
 
 <div class="pagenum">6</div>
-<p dir="rtl"></div><div class="pagebreak"></p>
+<p></div><div class="pagebreak"></p>
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0234/08.jpg" /></p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0234/08.jpg" /></p>
 
-<p dir="rtl">في النصف الثاني من المباراة ،مررأحد الصبية الكرة إلى أنديسوا
+<p>في النصف الثاني من المباراة ،مررأحد الصبية الكرة إلى أنديسوا
 تحركت بسرعة كبيرة باتجاه المرمى
 ثم ركلت الكرة بقوة وحققت هدفا</p>
 
 <div class="pagenum">7</div>
-<p dir="rtl"></div><div class="pagebreak"></p>
+<p></div><div class="pagebreak"></p>
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0234/09.jpg" /></p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0234/09.jpg" /></p>
 
-<p dir="rtl">و منذ ذلك اليوم سمحت الجماهير للفتيات بلعب كرة في المدرسة</p>
+<p>و منذ ذلك اليوم سمحت الجماهير للفتيات بلعب كرة في المدرسة</p>
 
 <div class="pagenum">8</div>
-<p dir="rtl"></div><div class="pagebreak"></p>
+<p></div><div class="pagebreak"></p>
 
-<p dir="rtl"><strong>Text:</strong> Eden Daniels<br /><strong>Illustrations:</strong> Eden Daniels, Lisa Treffry-Goatley (ed.)<br /><strong>Translation:</strong> Heba Tesheh<br /><strong>Language:</strong> Arabic</p>
-<p dir="rtl">This story is brought to you by the <a href="https://global-asp.github.io/">Global African Storybook Project</a>, an effort to translate the stories of the <a href="http://africanstorybook.org/">African Storybook Project</a> into all the languages of the world.<p dir="rtl">You can view the original story on the ASP website <a href="http://my.africanstorybook.org/stories/andiswa-soccer-star">here</a>
-<p dir="rtl"><a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
+<p><strong>Text:</strong> Eden Daniels<br /><strong>Illustrations:</strong> Eden Daniels, Lisa Treffry-Goatley (ed.)<br /><strong>Translation:</strong> Heba Tesheh<br /><strong>Language:</strong> Arabic</p>
+<p>This story is brought to you by the <a href="https://global-asp.github.io/">Global African Storybook Project</a>, an effort to translate the stories of the <a href="http://africanstorybook.org/">African Storybook Project</a> into all the languages of the world.<p>You can view the original story on the ASP website <a href="http://my.africanstorybook.org/stories/andiswa-soccer-star">here</a>
+<p><a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </p></p></p>
 
 
