--- a/stories/ar/0234_أنديسوا-نجمة-كرة-القدم_slides.html
+++ b/stories/ar/0234_أنديسوا-نجمة-كرة-القدم_slides.html
@@ -88,7 +88,7 @@
 <body>
 
 <section id="أنديسوا-نجمة-كرة-القدم" class="slide level1">
-<h1 dir="rtl">أنديسوا نجمة كرة القدم</h1>
+<h1>أنديسوا نجمة كرة القدم</h1>
 <center>
 <img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0234/01.jpg" />
 </center>
@@ -96,8 +96,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0234/02.jpg" /></p>
-<p dir="rtl">شاهدت أنديسوا الصبية يلعبون كرة القدم كانت تتمنى لو أنها تستطيع أن تنضم إليهم فسألت المدرب إن كانت تستطيع أن تدرب معهم</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0234/02.jpg" /></p>
+<p>شاهدت أنديسوا الصبية يلعبون كرة القدم كانت تتمنى لو أنها تستطيع أن تنضم إليهم فسألت المدرب إن كانت تستطيع أن تدرب معهم</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0234/03.jpg" /></p>
-<p dir="rtl">أجابها المدرب : في هذه المدرسة لا يسمح إلا للصبية أن يلعبوا كرة القدم</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0234/03.jpg" /></p>
+<p>أجابها المدرب : في هذه المدرسة لا يسمح إلا للصبية أن يلعبوا كرة القدم</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0234/04.jpg" /></p>
-<p dir="rtl">قال الصبية لها: العبي كرة الشبكة كرة الشبكة للبنات،وكرة القدم للصبيان</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0234/04.jpg" /></p>
+<p>قال الصبية لها: العبي كرة الشبكة كرة الشبكة للبنات،وكرة القدم للصبيان</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0234/05.jpg" /></p>
-<p dir="rtl">في اليوم التالي أقيم في المدرسة مبارة كبيرة لكرة القدم كان المدرب قلقا ،لأن أفضل لاعب عنده كان مريضا ، ولا يستطيع اللعب</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0234/05.jpg" /></p>
+<p>في اليوم التالي أقيم في المدرسة مبارة كبيرة لكرة القدم كان المدرب قلقا ،لأن أفضل لاعب عنده كان مريضا ، ولا يستطيع اللعب</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +132,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0234/06.jpg" /></p>
-<p dir="rtl">ركضت أنديسوا وترجته أن يدعها تلعب لم يكن المدرب وثقا مما عليه فعله بعد ذلك قرر أن يسمح لها بالانضمام إلى الفريق</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0234/06.jpg" /></p>
+<p>ركضت أنديسوا وترجته أن يدعها تلعب لم يكن المدرب وثقا مما عليه فعله بعد ذلك قرر أن يسمح لها بالانضمام إلى الفريق</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +141,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0234/07.jpg" /></p>
-<p dir="rtl">المبارة كانت صعبة جدا أصبحت في منتصفها، ولم يدخل أي هدف</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0234/07.jpg" /></p>
+<p>المبارة كانت صعبة جدا أصبحت في منتصفها، ولم يدخل أي هدف</p>
 <center>
 <strong>6</strong>
 </center>
@@ -150,8 +150,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0234/08.jpg" /></p>
-<p dir="rtl">في النصف الثاني من المباراة ،مررأحد الصبية الكرة إلى أنديسوا تحركت بسرعة كبيرة باتجاه المرمى ثم ركلت الكرة بقوة وحققت هدفا</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0234/08.jpg" /></p>
+<p>في النصف الثاني من المباراة ،مررأحد الصبية الكرة إلى أنديسوا تحركت بسرعة كبيرة باتجاه المرمى ثم ركلت الكرة بقوة وحققت هدفا</p>
 <center>
 <strong>7</strong>
 </center>
@@ -159,8 +159,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0234/09.jpg" /></p>
-<p dir="rtl">و منذ ذلك اليوم سمحت الجماهير للفتيات بلعب كرة في المدرسة</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0234/09.jpg" /></p>
+<p>و منذ ذلك اليوم سمحت الجماهير للفتيات بلعب كرة في المدرسة</p>
 <center>
 <strong>8</strong>
 </center>
@@ -170,17 +170,17 @@
 
 <h2 id="أنديسوا-نجمة-كرة-القدم-1">أنديسوا نجمة كرة القدم</h2>
 <strong>Text:</strong> Eden Daniels<br> <strong>Illustrations:</strong> Eden Daniels, Lisa Treffry-Goatley (ed.)<br> <strong>Translation:</strong> Heba Tesheh<br> <strong>Language:</strong> Arabic<br>
-<p dir="rtl">
+<p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
-<p dir="rtl">
+<p>
 You can view the original story on the ASP website <a href='http://my.africanstorybook.org/stories/andiswa-soccer-star'>here</a>
-<p dir="rtl"><div class="license">
+<p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
 
-<p dir="rtl"><center><div class="license">
-<a rel="license" href="http://creativecommons.org/licenses/by-nc/3.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc/3.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc/3.0/">Creative Commons Attribution-NonCommercial 3.0 Unported License</a>
-.</div></center>
+<p><center><div class="license">
+<a rel="license" href="http://creativecommons.org/licenses/by-nc/3.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc/3.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc/3.0/">Creative Commons Attribution-NonCommercial 3.0 Unported License</a>.
+</div></center>
 
 
 </section>
