--- a/stories/ar/0324_يوم-تركت-المنزل-ذاهباً-إلي-المدينة-.html
+++ b/stories/ar/0324_يوم-تركت-المنزل-ذاهباً-إلي-المدينة-.html
@@ -43,125 +43,125 @@
   <body>
 <div class='cover'><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/01.jpg" />
 
-<h1 dir="rtl" id="section">يوم تركت المنزل ذاهباً إلي المدينة</h1>
+<h1 id="section">يوم تركت المنزل ذاهباً إلي المدينة</h1>
 
 Lesley Koyi, Ursula Nafula<br>العربية</div><div class="pagebreak">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/02.jpg" /></p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/02.jpg" /></p>
 
-<p dir="rtl">كانت محطة القرية مزدحمة بالناس و الحافلات المكدسة بالركاب. علي الرصيف، إنتظر عدد أكبر من الركاب. كان السائقون ينادون علي مقاصدهم</p>
+<p>كانت محطة القرية مزدحمة بالناس و الحافلات المكدسة بالركاب. علي الرصيف، إنتظر عدد أكبر من الركاب. كان السائقون ينادون علي مقاصدهم</p>
 
 <div class="pagenum">1</div>
-<p dir="rtl"></div><div class="pagebreak"></p>
+<p></div><div class="pagebreak"></p>
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/03.jpg" /></p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/03.jpg" /></p>
 
-<p dir="rtl">سمعت احد المنادين يصرخ: “المدينة! المدينة! متجهين الي الغرب!” هذه كانت الحافلة التي احتاجها.</p>
+<p>سمعت احد المنادين يصرخ: “المدينة! المدينة! متجهين الي الغرب!” هذه كانت الحافلة التي احتاجها.</p>
 
 <div class="pagenum">2</div>
-<p dir="rtl"></div><div class="pagebreak"></p>
+<p></div><div class="pagebreak"></p>
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/04.jpg" /></p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/04.jpg" /></p>
 
-<p dir="rtl">كانت الحافلة قد اشرفت علي الاكتمال و لا تزال الركاب تتدافع للصعود اليها. بعض الركاب تركوا أمتعتهم في المكان المخصص لها بباطن الحافلة بينما اكتفي البعض الأخر بوضعها علي الأرفف بالداخل.</p>
+<p>كانت الحافلة قد اشرفت علي الاكتمال و لا تزال الركاب تتدافع للصعود اليها. بعض الركاب تركوا أمتعتهم في المكان المخصص لها بباطن الحافلة بينما اكتفي البعض الأخر بوضعها علي الأرفف بالداخل.</p>
 
 <div class="pagenum">3</div>
-<p dir="rtl"></div><div class="pagebreak"></p>
+<p></div><div class="pagebreak"></p>
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/05.jpg" /></p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/05.jpg" /></p>
 
-<p dir="rtl">امضي الركاب يبحثون عن مقاعد خالية وسط الزحام، وهم ممسكين بتذاكرههم. و ظلت الأمهات تداعب صغارها طوال الرحلة الطويلة.</p>
+<p>امضي الركاب يبحثون عن مقاعد خالية وسط الزحام، وهم ممسكين بتذاكرههم. و ظلت الأمهات تداعب صغارها طوال الرحلة الطويلة.</p>
 
 <div class="pagenum">4</div>
-<p dir="rtl"></div><div class="pagebreak"></p>
+<p></div><div class="pagebreak"></p>
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/06.jpg" /></p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/06.jpg" /></p>
 
-<p dir="rtl">تقلصت انا بجانب احد النوافذ. كان يجلس بجانبي رجلاً يحتضن حقيبة خضراء. كان الرجل يرتدي خفاً و معطفاً رثاً، و قد بدي عليه القلق.</p>
+<p>تقلصت انا بجانب احد النوافذ. كان يجلس بجانبي رجلاً يحتضن حقيبة خضراء. كان الرجل يرتدي خفاً و معطفاً رثاً، و قد بدي عليه القلق.</p>
 
 <div class="pagenum">5</div>
-<p dir="rtl"></div><div class="pagebreak"></p>
+<p></div><div class="pagebreak"></p>
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/07.jpg" /></p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/07.jpg" /></p>
 
-<p dir="rtl">همت بنظري خارج الحافلة و أدركت أنني أترك قريتي، المكان الذي نشأت فيه. كنت ذاهباً إلي المدينة الكبيرة.</p>
+<p>همت بنظري خارج الحافلة و أدركت أنني أترك قريتي، المكان الذي نشأت فيه. كنت ذاهباً إلي المدينة الكبيرة.</p>
 
 <div class="pagenum">6</div>
-<p dir="rtl"></div><div class="pagebreak"></p>
+<p></div><div class="pagebreak"></p>
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/08.jpg" /></p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/08.jpg" /></p>
 
-<p dir="rtl">اكتملت الحافلة و بات جميع الركاب جالسين في مقاعدهم. ظل الباعة الجائلين يسعون داخل الحافلة لبيع بضائعهم للركاب. كان كلاً منهم ينادي بما يعرض للبيع. كانت كلماتهم تضحكني.</p>
+<p>اكتملت الحافلة و بات جميع الركاب جالسين في مقاعدهم. ظل الباعة الجائلين يسعون داخل الحافلة لبيع بضائعهم للركاب. كان كلاً منهم ينادي بما يعرض للبيع. كانت كلماتهم تضحكني.</p>
 
 <div class="pagenum">7</div>
-<p dir="rtl"></div><div class="pagebreak"></p>
+<p></div><div class="pagebreak"></p>
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/09.jpg" /></p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/09.jpg" /></p>
 
-<p dir="rtl">بعض الركاب اشتري مأكولات و امضو يأكلونها، بينما فضل قيلل منهم المشروبات. و من لكم يكن يملك نقود مثلي إكتفي بالمشاهدة.</p>
+<p>بعض الركاب اشتري مأكولات و امضو يأكلونها، بينما فضل قيلل منهم المشروبات. و من لكم يكن يملك نقود مثلي إكتفي بالمشاهدة.</p>
 
 <div class="pagenum">8</div>
-<p dir="rtl"></div><div class="pagebreak"></p>
+<p></div><div class="pagebreak"></p>
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/10.jpg" /></p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/10.jpg" /></p>
 
-<p dir="rtl">قاطع صفير الحافلة كل هذه الأحداث ليشير أننا جاهزين للتحرك. صار السائق يصرخ في الباعة الجائلين ليتركوا الحافلة.</p>
+<p>قاطع صفير الحافلة كل هذه الأحداث ليشير أننا جاهزين للتحرك. صار السائق يصرخ في الباعة الجائلين ليتركوا الحافلة.</p>
 
 <div class="pagenum">9</div>
-<p dir="rtl"></div><div class="pagebreak"></p>
+<p></div><div class="pagebreak"></p>
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/11.jpg" /></p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/11.jpg" /></p>
 
-<p dir="rtl">تسارع الباعة الجائلين خارج الحافلة. بعضهم أعاد باقي النقود للركاب، و بعضهم قام بمحاولة أخيرة لبيع المزيد من الأغراض.</p>
+<p>تسارع الباعة الجائلين خارج الحافلة. بعضهم أعاد باقي النقود للركاب، و بعضهم قام بمحاولة أخيرة لبيع المزيد من الأغراض.</p>
 
 <div class="pagenum">10</div>
-<p dir="rtl"></div><div class="pagebreak"></p>
+<p></div><div class="pagebreak"></p>
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/12.jpg" /></p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/12.jpg" /></p>
 
-<p dir="rtl">إنطلقت الحافلة و نظرت أنا خارج النافذة. همت في إن كنت سأعود إلي قريتي يوماً ما.</p>
+<p>إنطلقت الحافلة و نظرت أنا خارج النافذة. همت في إن كنت سأعود إلي قريتي يوماً ما.</p>
 
 <div class="pagenum">11</div>
-<p dir="rtl"></div><div class="pagebreak"></p>
+<p></div><div class="pagebreak"></p>
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/13.jpg" /></p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/13.jpg" /></p>
 
-<p dir="rtl">بينما الحافلة قطعت الحافلة طريقها نحو المدينة، اصبح المناخ حار جداً. أغمضت عيناي و أنا آمل أن أنام.</p>
+<p>بينما الحافلة قطعت الحافلة طريقها نحو المدينة، اصبح المناخ حار جداً. أغمضت عيناي و أنا آمل أن أنام.</p>
 
 <div class="pagenum">12</div>
-<p dir="rtl"></div><div class="pagebreak"></p>
+<p></div><div class="pagebreak"></p>
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/14.jpg" /></p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/14.jpg" /></p>
 
-<p dir="rtl">ظل ذهني يجذبني للمنزل. هل ستكون أمي في أمان؟ هل ستجلب أرانبي مالاً؟ هل سيتذكر اخي أن يسقي أشجاري؟</p>
+<p>ظل ذهني يجذبني للمنزل. هل ستكون أمي في أمان؟ هل ستجلب أرانبي مالاً؟ هل سيتذكر اخي أن يسقي أشجاري؟</p>
 
 <div class="pagenum">13</div>
-<p dir="rtl"></div><div class="pagebreak"></p>
+<p></div><div class="pagebreak"></p>
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/15.jpg" /></p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/15.jpg" /></p>
 
-<p dir="rtl">في الطريق تذكرت أين يقطن عمي في المدينة الكبيرة. ظللت اردده حتي خلدت للنوم.</p>
+<p>في الطريق تذكرت أين يقطن عمي في المدينة الكبيرة. ظللت اردده حتي خلدت للنوم.</p>
 
 <div class="pagenum">14</div>
-<p dir="rtl"></div><div class="pagebreak"></p>
+<p></div><div class="pagebreak"></p>
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/16.jpg" /></p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/16.jpg" /></p>
 
-<p dir="rtl">بعد تسع ساعات، إستيقذت إلي قرع صاخب و صراخ المنادي علي الركاب العائدين إلي القرية. إنتزعت حقيبتي و أسرعت خارج الحافلة.</p>
+<p>بعد تسع ساعات، إستيقذت إلي قرع صاخب و صراخ المنادي علي الركاب العائدين إلي القرية. إنتزعت حقيبتي و أسرعت خارج الحافلة.</p>
 
 <div class="pagenum">15</div>
-<p dir="rtl"></div><div class="pagebreak"></p>
+<p></div><div class="pagebreak"></p>
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/17.jpg" /></p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/17.jpg" /></p>
 
-<p dir="rtl">كانت الحافلة تمتلئ بسرعة. قريباً ستشق طريقها عائدة إلي الشرق. بالنسبة إلي كان أهم شئ أن أبحث عن عمي.</p>
+<p>كانت الحافلة تمتلئ بسرعة. قريباً ستشق طريقها عائدة إلي الشرق. بالنسبة إلي كان أهم شئ أن أبحث عن عمي.</p>
 
 <div class="pagenum">16</div>
-<p dir="rtl"></div><div class="pagebreak"></p>
+<p></div><div class="pagebreak"></p>
 
-<p dir="rtl"><strong>Text:</strong> Lesley Koyi, Ursula Nafula<br /><strong>Illustrations:</strong> Brian Wambi<br /><strong>Translation:</strong> Maged Hassan<br /><strong>Language:</strong> Arabic</p>
-<p dir="rtl">This story is brought to you by the <a href="https://global-asp.github.io/">Global African Storybook Project</a>, an effort to translate the stories of the <a href="http://africanstorybook.org/">African Storybook Project</a> into all the languages of the world.<p dir="rtl">You can view the original story on the ASP website <a href="http://my.africanstorybook.org/stories/day-i-left-home-city">here</a>
-<p dir="rtl"><a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
+<p><strong>Text:</strong> Lesley Koyi, Ursula Nafula<br /><strong>Illustrations:</strong> Brian Wambi<br /><strong>Translation:</strong> Maged Hassan<br /><strong>Language:</strong> Arabic</p>
+<p>This story is brought to you by the <a href="https://global-asp.github.io/">Global African Storybook Project</a>, an effort to translate the stories of the <a href="http://africanstorybook.org/">African Storybook Project</a> into all the languages of the world.<p>You can view the original story on the ASP website <a href="http://my.africanstorybook.org/stories/day-i-left-home-city">here</a>
+<p><a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </p></p></p>
 
 
