--- a/stories/ar/0324_يوم-تركت-المنزل-ذاهباً-إلي-المدينة-_slides.html
+++ b/stories/ar/0324_يوم-تركت-المنزل-ذاهباً-إلي-المدينة-_slides.html
@@ -88,7 +88,7 @@
 <body>
 
 <section id="يوم-تركت-المنزل-ذاهبا-إلي-المدينة" class="slide level1">
-<h1 dir="rtl">يوم تركت المنزل ذاهباً إلي المدينة</h1>
+<h1>يوم تركت المنزل ذاهباً إلي المدينة</h1>
 <center>
 <img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/01.jpg" />
 </center>
@@ -96,8 +96,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/02.jpg" /></p>
-<p dir="rtl">كانت محطة القرية مزدحمة بالناس و الحافلات المكدسة بالركاب. علي الرصيف، إنتظر عدد أكبر من الركاب. كان السائقون ينادون علي مقاصدهم</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/02.jpg" /></p>
+<p>كانت محطة القرية مزدحمة بالناس و الحافلات المكدسة بالركاب. علي الرصيف، إنتظر عدد أكبر من الركاب. كان السائقون ينادون علي مقاصدهم</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/03.jpg" /></p>
-<p dir="rtl">سمعت احد المنادين يصرخ: &quot;المدينة! المدينة! متجهين الي الغرب!&quot; هذه كانت الحافلة التي احتاجها.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/03.jpg" /></p>
+<p>سمعت احد المنادين يصرخ: &quot;المدينة! المدينة! متجهين الي الغرب!&quot; هذه كانت الحافلة التي احتاجها.</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/04.jpg" /></p>
-<p dir="rtl">كانت الحافلة قد اشرفت علي الاكتمال و لا تزال الركاب تتدافع للصعود اليها. بعض الركاب تركوا أمتعتهم في المكان المخصص لها بباطن الحافلة بينما اكتفي البعض الأخر بوضعها علي الأرفف بالداخل.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/04.jpg" /></p>
+<p>كانت الحافلة قد اشرفت علي الاكتمال و لا تزال الركاب تتدافع للصعود اليها. بعض الركاب تركوا أمتعتهم في المكان المخصص لها بباطن الحافلة بينما اكتفي البعض الأخر بوضعها علي الأرفف بالداخل.</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/05.jpg" /></p>
-<p dir="rtl">امضي الركاب يبحثون عن مقاعد خالية وسط الزحام، وهم ممسكين بتذاكرههم. و ظلت الأمهات تداعب صغارها طوال الرحلة الطويلة.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/05.jpg" /></p>
+<p>امضي الركاب يبحثون عن مقاعد خالية وسط الزحام، وهم ممسكين بتذاكرههم. و ظلت الأمهات تداعب صغارها طوال الرحلة الطويلة.</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +132,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/06.jpg" /></p>
-<p dir="rtl">تقلصت انا بجانب احد النوافذ. كان يجلس بجانبي رجلاً يحتضن حقيبة خضراء. كان الرجل يرتدي خفاً و معطفاً رثاً، و قد بدي عليه القلق.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/06.jpg" /></p>
+<p>تقلصت انا بجانب احد النوافذ. كان يجلس بجانبي رجلاً يحتضن حقيبة خضراء. كان الرجل يرتدي خفاً و معطفاً رثاً، و قد بدي عليه القلق.</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +141,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/07.jpg" /></p>
-<p dir="rtl">همت بنظري خارج الحافلة و أدركت أنني أترك قريتي، المكان الذي نشأت فيه. كنت ذاهباً إلي المدينة الكبيرة.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/07.jpg" /></p>
+<p>همت بنظري خارج الحافلة و أدركت أنني أترك قريتي، المكان الذي نشأت فيه. كنت ذاهباً إلي المدينة الكبيرة.</p>
 <center>
 <strong>6</strong>
 </center>
@@ -150,8 +150,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/08.jpg" /></p>
-<p dir="rtl">اكتملت الحافلة و بات جميع الركاب جالسين في مقاعدهم. ظل الباعة الجائلين يسعون داخل الحافلة لبيع بضائعهم للركاب. كان كلاً منهم ينادي بما يعرض للبيع. كانت كلماتهم تضحكني.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/08.jpg" /></p>
+<p>اكتملت الحافلة و بات جميع الركاب جالسين في مقاعدهم. ظل الباعة الجائلين يسعون داخل الحافلة لبيع بضائعهم للركاب. كان كلاً منهم ينادي بما يعرض للبيع. كانت كلماتهم تضحكني.</p>
 <center>
 <strong>7</strong>
 </center>
@@ -159,8 +159,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/09.jpg" /></p>
-<p dir="rtl">بعض الركاب اشتري مأكولات و امضو يأكلونها، بينما فضل قيلل منهم المشروبات. و من لكم يكن يملك نقود مثلي إكتفي بالمشاهدة.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/09.jpg" /></p>
+<p>بعض الركاب اشتري مأكولات و امضو يأكلونها، بينما فضل قيلل منهم المشروبات. و من لكم يكن يملك نقود مثلي إكتفي بالمشاهدة.</p>
 <center>
 <strong>8</strong>
 </center>
@@ -168,8 +168,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/10.jpg" /></p>
-<p dir="rtl">قاطع صفير الحافلة كل هذه الأحداث ليشير أننا جاهزين للتحرك. صار السائق يصرخ في الباعة الجائلين ليتركوا الحافلة.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/10.jpg" /></p>
+<p>قاطع صفير الحافلة كل هذه الأحداث ليشير أننا جاهزين للتحرك. صار السائق يصرخ في الباعة الجائلين ليتركوا الحافلة.</p>
 <center>
 <strong>9</strong>
 </center>
@@ -177,8 +177,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/11.jpg" /></p>
-<p dir="rtl">تسارع الباعة الجائلين خارج الحافلة. بعضهم أعاد باقي النقود للركاب، و بعضهم قام بمحاولة أخيرة لبيع المزيد من الأغراض.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/11.jpg" /></p>
+<p>تسارع الباعة الجائلين خارج الحافلة. بعضهم أعاد باقي النقود للركاب، و بعضهم قام بمحاولة أخيرة لبيع المزيد من الأغراض.</p>
 <center>
 <strong>10</strong>
 </center>
@@ -186,8 +186,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/12.jpg" /></p>
-<p dir="rtl">إنطلقت الحافلة و نظرت أنا خارج النافذة. همت في إن كنت سأعود إلي قريتي يوماً ما.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/12.jpg" /></p>
+<p>إنطلقت الحافلة و نظرت أنا خارج النافذة. همت في إن كنت سأعود إلي قريتي يوماً ما.</p>
 <center>
 <strong>11</strong>
 </center>
@@ -195,8 +195,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/13.jpg" /></p>
-<p dir="rtl">بينما الحافلة قطعت الحافلة طريقها نحو المدينة، اصبح المناخ حار جداً. أغمضت عيناي و أنا آمل أن أنام.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/13.jpg" /></p>
+<p>بينما الحافلة قطعت الحافلة طريقها نحو المدينة، اصبح المناخ حار جداً. أغمضت عيناي و أنا آمل أن أنام.</p>
 <center>
 <strong>12</strong>
 </center>
@@ -204,8 +204,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/14.jpg" /></p>
-<p dir="rtl">ظل ذهني يجذبني للمنزل. هل ستكون أمي في أمان؟ هل ستجلب أرانبي مالاً؟ هل سيتذكر اخي أن يسقي أشجاري؟</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/14.jpg" /></p>
+<p>ظل ذهني يجذبني للمنزل. هل ستكون أمي في أمان؟ هل ستجلب أرانبي مالاً؟ هل سيتذكر اخي أن يسقي أشجاري؟</p>
 <center>
 <strong>13</strong>
 </center>
@@ -213,8 +213,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/15.jpg" /></p>
-<p dir="rtl">في الطريق تذكرت أين يقطن عمي في المدينة الكبيرة. ظللت اردده حتي خلدت للنوم.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/15.jpg" /></p>
+<p>في الطريق تذكرت أين يقطن عمي في المدينة الكبيرة. ظللت اردده حتي خلدت للنوم.</p>
 <center>
 <strong>14</strong>
 </center>
@@ -222,8 +222,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/16.jpg" /></p>
-<p dir="rtl">بعد تسع ساعات، إستيقذت إلي قرع صاخب و صراخ المنادي علي الركاب العائدين إلي القرية. إنتزعت حقيبتي و أسرعت خارج الحافلة.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/16.jpg" /></p>
+<p>بعد تسع ساعات، إستيقذت إلي قرع صاخب و صراخ المنادي علي الركاب العائدين إلي القرية. إنتزعت حقيبتي و أسرعت خارج الحافلة.</p>
 <center>
 <strong>15</strong>
 </center>
@@ -231,8 +231,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/17.jpg" /></p>
-<p dir="rtl">كانت الحافلة تمتلئ بسرعة. قريباً ستشق طريقها عائدة إلي الشرق. بالنسبة إلي كان أهم شئ أن أبحث عن عمي.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/17.jpg" /></p>
+<p>كانت الحافلة تمتلئ بسرعة. قريباً ستشق طريقها عائدة إلي الشرق. بالنسبة إلي كان أهم شئ أن أبحث عن عمي.</p>
 <center>
 <strong>16</strong>
 </center>
@@ -242,17 +242,17 @@
 
 <h2 id="يوم-تركت-المنزل-ذاهبا-إلي-المدينة-1">يوم تركت المنزل ذاهباً إلي المدينة</h2>
 <strong>Text:</strong> Lesley Koyi, Ursula Nafula<br> <strong>Illustrations:</strong> Brian Wambi<br> <strong>Translation:</strong> Maged Hassan<br> <strong>Language:</strong> Arabic<br>
-<p dir="rtl">
+<p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
-<p dir="rtl">
+<p>
 You can view the original story on the ASP website <a href='http://my.africanstorybook.org/stories/day-i-left-home-city'>here</a>
-<p dir="rtl"><div class="license">
+<p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
 
-<p dir="rtl"><center><div class="license">
-<a rel="license" href="http://creativecommons.org/licenses/by/3.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/3.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0 Unported License</a>
-.</div></center>
+<p><center><div class="license">
+<a rel="license" href="http://creativecommons.org/licenses/by/3.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/3.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0 Unported License</a>.
+</div></center>
 
 
 </section>
