--- a/stories/ar/0337_أطفال-الشمع.html
+++ b/stories/ar/0337_أطفال-الشمع.html
@@ -43,90 +43,90 @@
   <body>
 <div class='cover'><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/01.jpg" />
 
-<h1 dir="rtl" id="section">أطفال الشمع</h1>
+<h1 id="section">أطفال الشمع</h1>
 
 Southern African Folktale<br>العربية</div><div class="pagebreak">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/02.jpg" /></p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/02.jpg" /></p>
 
-<p dir="rtl">في يوم من الأيام، كانت هناك عائلة سعيدة</p>
+<p>في يوم من الأيام، كانت هناك عائلة سعيدة</p>
 
 <div class="pagenum">1</div>
-<p dir="rtl"></div><div class="pagebreak"></p>
+<p></div><div class="pagebreak"></p>
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/03.jpg" /></p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/03.jpg" /></p>
 
-<p dir="rtl">لم يحدث بينهم أي خلاف قط. كانوا دائما يعاونون والديهم في الحقل وفي المنزل.</p>
+<p>لم يحدث بينهم أي خلاف قط. كانوا دائما يعاونون والديهم في الحقل وفي المنزل.</p>
 
 <div class="pagenum">2</div>
-<p dir="rtl"></div><div class="pagebreak"></p>
+<p></div><div class="pagebreak"></p>
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/04.jpg" /></p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/04.jpg" /></p>
 
-<p dir="rtl">لكن لم يسمح لهم بالاقتراب من النار أبدا.</p>
+<p>لكن لم يسمح لهم بالاقتراب من النار أبدا.</p>
 
 <div class="pagenum">3</div>
-<p dir="rtl"></div><div class="pagebreak"></p>
+<p></div><div class="pagebreak"></p>
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/05.jpg" /></p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/05.jpg" /></p>
 
-<p dir="rtl">كان عليهم القيام بكل ما لديهم من أعمال خلال الليل، لأنهم مصنعون من الشمع.</p>
+<p>كان عليهم القيام بكل ما لديهم من أعمال خلال الليل، لأنهم مصنعون من الشمع.</p>
 
 <div class="pagenum">4</div>
-<p dir="rtl"></div><div class="pagebreak"></p>
+<p></div><div class="pagebreak"></p>
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/06.jpg" /></p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/06.jpg" /></p>
 
-<p dir="rtl">ولكن أحد الأولاد كان يتوق إلى الخروج في ضوء الشمس.</p>
+<p>ولكن أحد الأولاد كان يتوق إلى الخروج في ضوء الشمس.</p>
 
 <div class="pagenum">5</div>
-<p dir="rtl"></div><div class="pagebreak"></p>
+<p></div><div class="pagebreak"></p>
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/07.jpg" /></p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/07.jpg" /></p>
 
-<p dir="rtl">وذات يوم اشتدت رغبته في الخروج في النهار، فحذروه إخوته …</p>
+<p>وذات يوم اشتدت رغبته في الخروج في النهار، فحذروه إخوته …</p>
 
 <div class="pagenum">6</div>
-<p dir="rtl"></div><div class="pagebreak"></p>
+<p></div><div class="pagebreak"></p>
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/08.jpg" /></p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/08.jpg" /></p>
 
-<p dir="rtl">ولكن بعد فوات الأوان! فقد ذاب في الشمس الحارقة.</p>
+<p>ولكن بعد فوات الأوان! فقد ذاب في الشمس الحارقة.</p>
 
 <div class="pagenum">7</div>
-<p dir="rtl"></div><div class="pagebreak"></p>
+<p></div><div class="pagebreak"></p>
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/09.jpg" /></p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/09.jpg" /></p>
 
-<p dir="rtl">كان أطفال الشمع حزينين للغاية لرؤية أخيهم يذوب.</p>
+<p>كان أطفال الشمع حزينين للغاية لرؤية أخيهم يذوب.</p>
 
 <div class="pagenum">8</div>
-<p dir="rtl"></div><div class="pagebreak"></p>
+<p></div><div class="pagebreak"></p>
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/10.jpg" /></p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/10.jpg" /></p>
 
-<p dir="rtl">إلا أنهم قاموا بتشكيل قطعة الشمع المنصهر إلى طير.</p>
+<p>إلا أنهم قاموا بتشكيل قطعة الشمع المنصهر إلى طير.</p>
 
 <div class="pagenum">9</div>
-<p dir="rtl"></div><div class="pagebreak"></p>
+<p></div><div class="pagebreak"></p>
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/11.jpg" /></p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/11.jpg" /></p>
 
-<p dir="rtl">بعد ذلك، أخذوا أخاهم المتشكل على هيئة طير إلى جبل عال.</p>
+<p>بعد ذلك، أخذوا أخاهم المتشكل على هيئة طير إلى جبل عال.</p>
 
 <div class="pagenum">10</div>
-<p dir="rtl"></div><div class="pagebreak"></p>
+<p></div><div class="pagebreak"></p>
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/12.jpg" /></p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/12.jpg" /></p>
 
-<p dir="rtl">ومع بزوغ الشمس، طار بعيدا وهو يغني في ضوء الصباح.</p>
+<p>ومع بزوغ الشمس، طار بعيدا وهو يغني في ضوء الصباح.</p>
 
 <div class="pagenum">11</div>
-<p dir="rtl"></div><div class="pagebreak"></p>
+<p></div><div class="pagebreak"></p>
 
-<p dir="rtl"><strong>Text:</strong> Southern African Folktale<br /><strong>Illustrations:</strong> Wiehan de Jager<br /><strong>Translation:</strong> Abrar Wafa<br /><strong>Language:</strong> Arabic</p>
-<p dir="rtl">This story is brought to you by the <a href="https://global-asp.github.io/">Global African Storybook Project</a>, an effort to translate the stories of the <a href="http://africanstorybook.org/">African Storybook Project</a> into all the languages of the world.<p dir="rtl">You can view the original story on the ASP website <a href="http://my.africanstorybook.org/stories/children-wax">here</a>
-<p dir="rtl"><a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
+<p><strong>Text:</strong> Southern African Folktale<br /><strong>Illustrations:</strong> Wiehan de Jager<br /><strong>Translation:</strong> Abrar Wafa<br /><strong>Language:</strong> Arabic</p>
+<p>This story is brought to you by the <a href="https://global-asp.github.io/">Global African Storybook Project</a>, an effort to translate the stories of the <a href="http://africanstorybook.org/">African Storybook Project</a> into all the languages of the world.<p>You can view the original story on the ASP website <a href="http://my.africanstorybook.org/stories/children-wax">here</a>
+<p><a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </p></p></p>
 
 
