--- a/stories/pa/0337_ਮੋਮ-ਦੇ-ਬੱਚੇ_slides.html
+++ b/stories/pa/0337_ਮੋਮ-ਦੇ-ਬੱਚੇ_slides.html
@@ -142,7 +142,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/07.jpg" /></p>
-<p>ਇੱਕ ਦਿਨ ਉਸਦੀ ਤਮੰਨਾ ਬਹੁਤ ਵਧ ਗਈ। ਉਸ ਦੇ ਭਰਾਵਾਂ ਨੇ ਉਸ ਨੂੰ ਚੇਤਾਵਨੀ ਦਿੱਤੀ...</p>
+<p>ਇੱਕ ਦਿਨ ਉਸਦੀ ਤਮੰਨਾ ਬਹੁਤ ਵਧ ਗਈ। ਉਸ ਦੇ ਭਰਾਵਾਂ ਨੇ ਉਸ ਨੂੰ ਚੇਤਾਵਨੀ ਦਿੱਤੀ…</p>
 <center>
 <strong>6</strong>
 </center>
