--- a/stories/ar/0006_أنانسي-و-الحكمة.html
+++ b/stories/ar/0006_أنانسي-و-الحكمة.html
@@ -43,55 +43,55 @@
   <body>
 <div class='cover'><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/01.jpg" />
 
-<h1 dir="rtl" id="section">أنانسي و الحكمة</h1>
+<h1 id="section">أنانسي و الحكمة</h1>
 
 Ghanaian folktale<br>العربية</div><div class="pagebreak">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/02.jpg" /></p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/02.jpg" /></p>
 
-<p dir="rtl">في قديم الزمان، كان الناس لا يعرفون شيئاً. كانوا لا يعرفون طريقة زراعة المحاصيل، أو نسج الأقمشة، أو صناعة الأدوات الحديدية. كان هناك الإله نيام في السماء وكان يملك كل الحكمة الموجودة في العالم. و كان محتفظاً بها في وعاء من الفخار.</p>
+<p>في قديم الزمان، كان الناس لا يعرفون شيئاً. كانوا لا يعرفون طريقة زراعة المحاصيل، أو نسج الأقمشة، أو صناعة الأدوات الحديدية. كان هناك الإله نيام في السماء وكان يملك كل الحكمة الموجودة في العالم. و كان محتفظاً بها في وعاء من الفخار.</p>
 
 <div class="pagenum">1</div>
-<p dir="rtl"></div><div class="pagebreak"></p>
+<p></div><div class="pagebreak"></p>
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/03.jpg" /></p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/03.jpg" /></p>
 
-<p dir="rtl">في يوم من الأيام، قرر نيام أن يعطي وعاء الحكمة إلى أنانسي. في كل مرة كان أنانسي ينظر في وعاء الفخار، كان يتعلم شيئاً جديداً. كان أمراً مثيراً!</p>
+<p>في يوم من الأيام، قرر نيام أن يعطي وعاء الحكمة إلى أنانسي. في كل مرة كان أنانسي ينظر في وعاء الفخار، كان يتعلم شيئاً جديداً. كان أمراً مثيراً!</p>
 
 <div class="pagenum">2</div>
-<p dir="rtl"></div><div class="pagebreak"></p>
+<p></div><div class="pagebreak"></p>
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/04.jpg" /></p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/04.jpg" /></p>
 
-<p dir="rtl">فكر الجشع أنانسي: “أنا سوف أحتفظ بالوعاء في مكان آمن في أعلى شجرة طويلة. بعد ذلك يمكن أن يكون كل شيء لنفسي!” ونسج خيط طويل، ولفه حول وعاء الطين، وربطه إلى بطنه. بدأ تسلق الشجرة. ولكن كان من الصعب تسلق الشجرة و الوعاء يخبط في ركبتيه طوال الوقت.</p>
+<p>فكر الجشع أنانسي: “أنا سوف أحتفظ بالوعاء في مكان آمن في أعلى شجرة طويلة. بعد ذلك يمكن أن يكون كل شيء لنفسي!” ونسج خيط طويل، ولفه حول وعاء الطين، وربطه إلى بطنه. بدأ تسلق الشجرة. ولكن كان من الصعب تسلق الشجرة و الوعاء يخبط في ركبتيه طوال الوقت.</p>
 
 <div class="pagenum">3</div>
-<p dir="rtl"></div><div class="pagebreak"></p>
+<p></div><div class="pagebreak"></p>
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/05.jpg" /></p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/05.jpg" /></p>
 
-<p dir="rtl">خلال كل هذا الوقت كان ابن أنانسي الصغير يشاهد من أسفل الشجرة. وقال: “ألن يكون من الأسهل تسلق الشجرة إذا كان الوعاء مربوطاً إلى ظهرك بدلا من بطنك؟” حاول أنانسي ربط وعاء الفخار المليء بالحكمة إلى ظهره، و أصبح فعلاً تسلق الشجرة أسهل.</p>
+<p>خلال كل هذا الوقت كان ابن أنانسي الصغير يشاهد من أسفل الشجرة. وقال: “ألن يكون من الأسهل تسلق الشجرة إذا كان الوعاء مربوطاً إلى ظهرك بدلا من بطنك؟” حاول أنانسي ربط وعاء الفخار المليء بالحكمة إلى ظهره، و أصبح فعلاً تسلق الشجرة أسهل.</p>
 
 <div class="pagenum">4</div>
-<p dir="rtl"></div><div class="pagebreak"></p>
+<p></div><div class="pagebreak"></p>
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/06.jpg" /></p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/06.jpg" /></p>
 
-<p dir="rtl">خلال وقت قصير وصل إلى أعلى الشجرة. ولكن بعد ذلك توقف وفكر، “أنا من المفترض أن أكون صاحب كل الحكمة، وهنا كان ابني أذكى مني!” كان أنانسي غاضب جدا وألقى وعاء الفخار إلى أسفل الشجرة.</p>
+<p>خلال وقت قصير وصل إلى أعلى الشجرة. ولكن بعد ذلك توقف وفكر، “أنا من المفترض أن أكون صاحب كل الحكمة، وهنا كان ابني أذكى مني!” كان أنانسي غاضب جدا وألقى وعاء الفخار إلى أسفل الشجرة.</p>
 
 <div class="pagenum">5</div>
-<p dir="rtl"></div><div class="pagebreak"></p>
+<p></div><div class="pagebreak"></p>
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/07.jpg" /></p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/07.jpg" /></p>
 
-<p dir="rtl">تحطم الوعاء إلى قطع صغيرة على الأرض. وأصبحت الحكمة للجميع لكي يتشاركوها. و هكذا تعلم الناس الفلاحة، و نسج الأقمشة، و صناعة الأدوات الحديدية، وجميع الأشياء الأخرى التي يعرف الناس كيفية القيام بها.</p>
+<p>تحطم الوعاء إلى قطع صغيرة على الأرض. وأصبحت الحكمة للجميع لكي يتشاركوها. و هكذا تعلم الناس الفلاحة، و نسج الأقمشة، و صناعة الأدوات الحديدية، وجميع الأشياء الأخرى التي يعرف الناس كيفية القيام بها.</p>
 
 <div class="pagenum">6</div>
-<p dir="rtl"></div><div class="pagebreak"></p>
+<p></div><div class="pagebreak"></p>
 
-<p dir="rtl"><strong>Text:</strong> Ghanaian folktale<br /><strong>Illustrations:</strong> Wiehan de Jager<br /><strong>Translation:</strong> Abrar Wafa<br /><strong>Language:</strong> Arabic</p>
-<p dir="rtl">This story is brought to you by the <a href="https://global-asp.github.io/">Global African Storybook Project</a>, an effort to translate the stories of the <a href="http://africanstorybook.org/">African Storybook Project</a> into all the languages of the world.<p dir="rtl">You can view the original story on the ASP website <a href="http://my.africanstorybook.org/stories/anansi-and-wisdom">here</a>
-<p dir="rtl"><a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
+<p><strong>Text:</strong> Ghanaian folktale<br /><strong>Illustrations:</strong> Wiehan de Jager<br /><strong>Translation:</strong> Abrar Wafa<br /><strong>Language:</strong> Arabic</p>
+<p>This story is brought to you by the <a href="https://global-asp.github.io/">Global African Storybook Project</a>, an effort to translate the stories of the <a href="http://africanstorybook.org/">African Storybook Project</a> into all the languages of the world.<p>You can view the original story on the ASP website <a href="http://my.africanstorybook.org/stories/anansi-and-wisdom">here</a>
+<p><a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </p></p></p>
 
 
