--- a/stories/ar/0089_خلاي-تتحدث-إلى-النباتات.html
+++ b/stories/ar/0089_خلاي-تتحدث-إلى-النباتات.html
@@ -43,78 +43,78 @@
   <body>
 <div class='cover'><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/01.jpg" />
 
-<h1 dir="rtl" id="section">خلاي تتحدث إلى النباتات</h1>
+<h1 id="section">خلاي تتحدث إلى النباتات</h1>
 
 Ursula Nafula<br>العربية</div><div class="pagebreak">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/02.jpg" /></p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/02.jpg" /></p>
 
-<p dir="rtl">هذه خلاي
+<p>هذه خلاي
 عمرها سبع سنين معنى اسمها الشخص الجيد
 يدعا في لغتها لوبوكوزو</p>
 
 <div class="pagenum">1</div>
-<p dir="rtl"></div><div class="pagebreak"></p>
+<p></div><div class="pagebreak"></p>
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/03.jpg" /></p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/03.jpg" /></p>
 
-<p dir="rtl">تستيقظ خلاي كل صباح و تقول لشجرة البرتقال: أرجوك يا شجرة البرتقال اكبري
+<p>تستيقظ خلاي كل صباح و تقول لشجرة البرتقال: أرجوك يا شجرة البرتقال اكبري
 وأعطينا الكثير من البرتقال الطازج</p>
 
 <div class="pagenum">2</div>
-<p dir="rtl"></div><div class="pagebreak"></p>
+<p></div><div class="pagebreak"></p>
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/04.jpg" /></p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/04.jpg" /></p>
 
-<p dir="rtl">تمشي خلاي إلى المدرسة ،وفي طريقها تتحدث مع الأعشاب
+<p>تمشي خلاي إلى المدرسة ،وفي طريقها تتحدث مع الأعشاب
 أرجوك أيتها الأعشاب اكبري وابقي خضراء ولاتجف.</p>
 
 <div class="pagenum">3</div>
-<p dir="rtl"></div><div class="pagebreak"></p>
+<p></div><div class="pagebreak"></p>
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/05.jpg" /></p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/05.jpg" /></p>
 
-<p dir="rtl">تمر خلاي أمام الأزهار البرية
+<p>تمر خلاي أمام الأزهار البرية
 أرجوك أيتها الأزهار ابقي مزهرة لأستطيع أن أضعك فوق شعري</p>
 
 <div class="pagenum">4</div>
-<p dir="rtl"></div><div class="pagebreak"></p>
+<p></div><div class="pagebreak"></p>
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/06.jpg" /></p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/06.jpg" /></p>
 
-<p dir="rtl">في المدرسة تتحدث مع الشجرة التي في منتصف المبنى
+<p>في المدرسة تتحدث مع الشجرة التي في منتصف المبنى
 أرجوكي أيتها الشجرة مدي أغصانك الكبيرة لنستطيع القراءة تحت ظلك.</p>
 
 <div class="pagenum">5</div>
-<p dir="rtl"></div><div class="pagebreak"></p>
+<p></div><div class="pagebreak"></p>
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/07.jpg" /></p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/07.jpg" /></p>
 
-<p dir="rtl">تتحدث خلاي مع الشجيرات الصغيرة
+<p>تتحدث خلاي مع الشجيرات الصغيرة
 أرجوك اكبري وكوني قوية لتمنعي الأشخاص السيئين من الدخول.</p>
 
 <div class="pagenum">6</div>
-<p dir="rtl"></div><div class="pagebreak"></p>
+<p></div><div class="pagebreak"></p>
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/08.jpg" /></p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/08.jpg" /></p>
 
-<p dir="rtl">عندما تعود خلاي إلى البيت ،تزور شجرة البرتقال ، وتسألها ألم يصبح برتقالك طازجا بعد؟</p>
+<p>عندما تعود خلاي إلى البيت ،تزور شجرة البرتقال ، وتسألها ألم يصبح برتقالك طازجا بعد؟</p>
 
 <div class="pagenum">7</div>
-<p dir="rtl"></div><div class="pagebreak"></p>
+<p></div><div class="pagebreak"></p>
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/09.jpg" /></p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/09.jpg" /></p>
 
-<p dir="rtl">تتنهد خلاي :البرتقال بقي أخضرا
+<p>تتنهد خلاي :البرتقال بقي أخضرا
 ثم تقول: سوف أراك يا شجرة البرتقال غدا
 بعدها ربما سيكون لديك برتقالا طازجا لي</p>
 
 <div class="pagenum">8</div>
-<p dir="rtl"></div><div class="pagebreak"></p>
+<p></div><div class="pagebreak"></p>
 
-<p dir="rtl"><strong>Text:</strong> Ursula Nafula<br /><strong>Illustrations:</strong> Jesse Pietersen<br /><strong>Translation:</strong> Heba Tesheh<br /><strong>Language:</strong> Arabic</p>
-<p dir="rtl">This story is brought to you by the <a href="https://global-asp.github.io/">Global African Storybook Project</a>, an effort to translate the stories of the <a href="http://africanstorybook.org/">African Storybook Project</a> into all the languages of the world.<p dir="rtl">You can view the original story on the ASP website <a href="http://my.africanstorybook.org/stories/khalai-talks-plants">here</a>
-<p dir="rtl"><a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
+<p><strong>Text:</strong> Ursula Nafula<br /><strong>Illustrations:</strong> Jesse Pietersen<br /><strong>Translation:</strong> Heba Tesheh<br /><strong>Language:</strong> Arabic</p>
+<p>This story is brought to you by the <a href="https://global-asp.github.io/">Global African Storybook Project</a>, an effort to translate the stories of the <a href="http://africanstorybook.org/">African Storybook Project</a> into all the languages of the world.<p>You can view the original story on the ASP website <a href="http://my.africanstorybook.org/stories/khalai-talks-plants">here</a>
+<p><a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </p></p></p>
 
 
