--- a/stories/ar/0129_الأخ-الصغير-الكسول_slides.html
+++ b/stories/ar/0129_الأخ-الصغير-الكسول_slides.html
@@ -88,7 +88,7 @@
 <body>
 
 <section id="الأخ-الصغير-الكسول" class="slide level1">
-<h1 dir="rtl">الأخ الصغير الكسول</h1>
+<h1>الأخ الصغير الكسول</h1>
 <center>
 <img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0129/01.jpg" />
 </center>
@@ -96,8 +96,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0129/02.jpg" /></p>
-<p dir="rtl">أنا استيقظ و أشعل النار</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0129/02.jpg" /></p>
+<p>أنا استيقظ و أشعل النار</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0129/03.jpg" /></p>
-<p dir="rtl">أنا أغلي القليل من الماء</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0129/03.jpg" /></p>
+<p>أنا أغلي القليل من الماء</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0129/04.jpg" /></p>
-<p dir="rtl">أنا أقطع حطب الأشجار</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0129/04.jpg" /></p>
+<p>أنا أقطع حطب الأشجار</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0129/05.jpg" /></p>
-<p dir="rtl">أنا أحرك الوعاء</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0129/05.jpg" /></p>
+<p>أنا أحرك الوعاء</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +132,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0129/06.jpg" /></p>
-<p dir="rtl">أنا أنظف الأرض</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0129/06.jpg" /></p>
+<p>أنا أنظف الأرض</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +141,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0129/07.jpg" /></p>
-<p dir="rtl">أنا أغسل الصحون</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0129/07.jpg" /></p>
+<p>أنا أغسل الصحون</p>
 <center>
 <strong>6</strong>
 </center>
@@ -150,8 +150,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0129/08.jpg" /></p>
-<p dir="rtl">لماذا أنا أعمل بجد... بينما أخي مشغول باللعب</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0129/08.jpg" /></p>
+<p>لماذا أنا أعمل بجد... بينما أخي مشغول باللعب</p>
 <center>
 <strong>7</strong>
 </center>
@@ -161,17 +161,17 @@
 
 <h2 id="الأخ-الصغير-الكسول-1">الأخ الصغير الكسول</h2>
 <strong>Text:</strong> Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br> <strong>Illustrations:</strong> Mlungisi Dlamini<br> <strong>Translation:</strong> Heba Tesheh<br> <strong>Language:</strong> Arabic<br>
-<p dir="rtl">
+<p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
-<p dir="rtl">
+<p>
 You can view the original story on the ASP website <a href='http://my.africanstorybook.org/stories/lazy-little-brother'>here</a>
-<p dir="rtl"><div class="license">
+<p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
 
-<p dir="rtl"><center><div class="license">
-<a rel="license" href="http://creativecommons.org/licenses/by-nc/3.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc/3.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc/3.0/">Creative Commons Attribution-NonCommercial 3.0 Unported License</a>
-.</div></center>
+<p><center><div class="license">
+<a rel="license" href="http://creativecommons.org/licenses/by-nc/3.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc/3.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc/3.0/">Creative Commons Attribution-NonCommercial 3.0 Unported License</a>.
+</div></center>
 
 
 </section>
