--- a/stories/ar/0156_التمساح-الجائع.html
+++ b/stories/ar/0156_التمساح-الجائع.html
@@ -43,48 +43,48 @@
   <body>
 <div class='cover'><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0156/01.jpg" />
 
-<h1 dir="rtl" id="section">التمساح الجائع</h1>
+<h1 id="section">التمساح الجائع</h1>
 
 Christian G.<br>العربية</div><div class="pagebreak">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0156/02.jpg" /></p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0156/02.jpg" /></p>
 
-<p dir="rtl">في يوم من الأيام، كان هنالك تمساح جائع</p>
+<p>في يوم من الأيام، كان هنالك تمساح جائع</p>
 
 <div class="pagenum">1</div>
-<p dir="rtl"></div><div class="pagebreak"></p>
+<p></div><div class="pagebreak"></p>
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0156/03.jpg" /></p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0156/03.jpg" /></p>
 
-<p dir="rtl">…كان يبحث عن الطعام ببطء وهدوء. وفجأة</p>
+<p>…كان يبحث عن الطعام ببطء وهدوء. وفجأة</p>
 
 <div class="pagenum">2</div>
-<p dir="rtl"></div><div class="pagebreak"></p>
+<p></div><div class="pagebreak"></p>
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0156/04.jpg" /></p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0156/04.jpg" /></p>
 
-<p dir="rtl">طجججج!!!! قفز التمساح</p>
+<p>!طجججج!!! قفز التمساح</p>
 
 <div class="pagenum">3</div>
-<p dir="rtl"></div><div class="pagebreak"></p>
+<p></div><div class="pagebreak"></p>
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0156/05.jpg" /></p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0156/05.jpg" /></p>
 
-<p dir="rtl">لم يعد التمساح جائعاً بعد ذلك بل أصبح سعيداً</p>
+<p>لم يعد التمساح جائعاً بعد ذلك بل أصبح سعيداً</p>
 
 <div class="pagenum">4</div>
-<p dir="rtl"></div><div class="pagebreak"></p>
+<p></div><div class="pagebreak"></p>
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0156/06.jpg" /></p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0156/06.jpg" /></p>
 
-<p dir="rtl">إلى أن يجوع مرة أخرى</p>
+<p>إلى أن يجوع مرة أخرى</p>
 
 <div class="pagenum">5</div>
-<p dir="rtl"></div><div class="pagebreak"></p>
+<p></div><div class="pagebreak"></p>
 
-<p dir="rtl"><strong>Text:</strong> Christian G.<br /><strong>Illustrations:</strong> Wiehan de Jager<br /><strong>Translation:</strong> Hanadi Traifeh<br /><strong>Language:</strong> Arabic</p>
-<p dir="rtl">This story is brought to you by the <a href="https://global-asp.github.io/">Global African Storybook Project</a>, an effort to translate the stories of the <a href="http://africanstorybook.org/">African Storybook Project</a> into all the languages of the world.<p dir="rtl">You can view the original story on the ASP website <a href="http://my.africanstorybook.org/stories/hungry-crocodile">here</a>
-<p dir="rtl"><a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
+<p><strong>Text:</strong> Christian G.<br /><strong>Illustrations:</strong> Wiehan de Jager<br /><strong>Translation:</strong> Hanadi Traifeh<br /><strong>Language:</strong> Arabic</p>
+<p>This story is brought to you by the <a href="https://global-asp.github.io/">Global African Storybook Project</a>, an effort to translate the stories of the <a href="http://africanstorybook.org/">African Storybook Project</a> into all the languages of the world.<p>You can view the original story on the ASP website <a href="http://my.africanstorybook.org/stories/hungry-crocodile">here</a>
+<p><a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </p></p></p>
 
 
