--- a/stories/ar/0253_قصتي-المصورة.html
+++ b/stories/ar/0253_قصتي-المصورة.html
@@ -43,41 +43,41 @@
   <body>
 <div class='cover'><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0253/01.jpg" />
 
-<h1 dir="rtl" id="section">قصتي المصورة</h1>
+<h1 id="section">قصتي المصورة</h1>
 
 Oku Modesto<br>العربية</div><div class="pagebreak">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0253/02.jpg" /></p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0253/02.jpg" /></p>
 
-<p dir="rtl">فتاة</p>
+<p>فتاة</p>
 
 <div class="pagenum">1</div>
-<p dir="rtl"></div><div class="pagebreak"></p>
+<p></div><div class="pagebreak"></p>
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0253/03.jpg" /></p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0253/03.jpg" /></p>
 
-<p dir="rtl">طير</p>
+<p>طير</p>
 
 <div class="pagenum">2</div>
-<p dir="rtl"></div><div class="pagebreak"></p>
+<p></div><div class="pagebreak"></p>
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0253/04.jpg" /></p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0253/04.jpg" /></p>
 
-<p dir="rtl">أسد</p>
+<p>أسد</p>
 
 <div class="pagenum">3</div>
-<p dir="rtl"></div><div class="pagebreak"></p>
+<p></div><div class="pagebreak"></p>
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0253/05.jpg" /></p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0253/05.jpg" /></p>
 
-<p dir="rtl">قطة</p>
+<p>قطة</p>
 
 <div class="pagenum">4</div>
-<p dir="rtl"></div><div class="pagebreak"></p>
+<p></div><div class="pagebreak"></p>
 
-<p dir="rtl"><strong>Text:</strong> Oku Modesto<br /><strong>Illustrations:</strong> Rob Owen, Marleen Visser, Katrien Coetzer, Wiehan de Jager, Karen Lilje, Catherine Groenewald, Alice Toich<br /><strong>Translation:</strong> Hanadi Traifeh<br /><strong>Language:</strong> Arabic</p>
-<p dir="rtl">This story is brought to you by the <a href="https://global-asp.github.io/">Global African Storybook Project</a>, an effort to translate the stories of the <a href="http://africanstorybook.org/">African Storybook Project</a> into all the languages of the world.<p dir="rtl">You can view the original story on the ASP website <a href="http://my.africanstorybook.org/stories/my-picture-book-0">here</a>
-<p dir="rtl"><a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
+<p><strong>Text:</strong> Oku Modesto<br /><strong>Illustrations:</strong> Rob Owen, Marleen Visser, Katrien Coetzer, Wiehan de Jager, Karen Lilje, Catherine Groenewald, Alice Toich<br /><strong>Translation:</strong> Hanadi Traifeh<br /><strong>Language:</strong> Arabic</p>
+<p>This story is brought to you by the <a href="https://global-asp.github.io/">Global African Storybook Project</a>, an effort to translate the stories of the <a href="http://africanstorybook.org/">African Storybook Project</a> into all the languages of the world.<p>You can view the original story on the ASP website <a href="http://my.africanstorybook.org/stories/my-picture-book-0">here</a>
+<p><a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </p></p></p>
 
 
