--- a/stories/ar/0327_لنعد الحيوانات.html
+++ b/stories/ar/0327_لنعد الحيوانات.html
@@ -43,69 +43,69 @@
   <body>
 <div class='cover'><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0327/01.jpg" />
 
-<h1 dir="rtl" id="section">لنعد الحيوانات</h1>
+<h1 id="section">لنعد الحيوانات</h1>
 
 Zanele Buthelezi, Thembani Dladla, Clare Verbeek<br>العربية</div><div class="pagebreak">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0327/02.jpg" /></p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0327/02.jpg" /></p>
 
-<p dir="rtl">فيل واحد ذاهب لشرب الماء.</p>
+<p>فيل واحد ذاهب لشرب الماء.</p>
 
 <div class="pagenum">1</div>
-<p dir="rtl"></div><div class="pagebreak"></p>
+<p></div><div class="pagebreak"></p>
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0327/03.jpg" /></p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0327/03.jpg" /></p>
 
-<p dir="rtl">زرافتان ذاهبتان لشرب الماء.</p>
+<p>زرافتان ذاهبتان لشرب الماء.</p>
 
 <div class="pagenum">2</div>
-<p dir="rtl"></div><div class="pagebreak"></p>
+<p></div><div class="pagebreak"></p>
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0327/04.jpg" /></p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0327/04.jpg" /></p>
 
-<p dir="rtl">ثلاثة جواميس وأربعة طيور ذاهبون أيضا لشرب الماء.</p>
+<p>ثلاثة جواميس وأربعة طيور ذاهبون أيضا لشرب الماء.</p>
 
 <div class="pagenum">3</div>
-<p dir="rtl"></div><div class="pagebreak"></p>
+<p></div><div class="pagebreak"></p>
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0327/05.jpg" /></p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0327/05.jpg" /></p>
 
-<p dir="rtl">خمسة ظباء وستة خنازير برية يسيرون نحو الماء.</p>
+<p>خمسة ظباء وستة خنازير برية يسيرون نحو الماء.</p>
 
 <div class="pagenum">4</div>
-<p dir="rtl"></div><div class="pagebreak"></p>
+<p></div><div class="pagebreak"></p>
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0327/06.jpg" /></p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0327/06.jpg" /></p>
 
-<p dir="rtl">سبعة أحمرة وحشية تجري نحو الماء.</p>
+<p>سبعة أحمرة وحشية تجري نحو الماء.</p>
 
 <div class="pagenum">5</div>
-<p dir="rtl"></div><div class="pagebreak"></p>
+<p></div><div class="pagebreak"></p>
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0327/07.jpg" /></p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0327/07.jpg" /></p>
 
-<p dir="rtl">ثماني ضفادع وتسع سمكات يسبحن في الماء.</p>
+<p>ثماني ضفادع وتسع سمكات يسبحن في الماء.</p>
 
 <div class="pagenum">6</div>
-<p dir="rtl"></div><div class="pagebreak"></p>
+<p></div><div class="pagebreak"></p>
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0327/08.jpg" /></p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0327/08.jpg" /></p>
 
-<p dir="rtl">أسد واحد يزمجر. هو أيضا يريد أن يشرب. من ذا الذي يخاف من الأسد؟</p>
+<p>أسد واحد يزمجر. هو أيضا يريد أن يشرب. من ذا الذي يخاف من الأسد؟</p>
 
 <div class="pagenum">7</div>
-<p dir="rtl"></div><div class="pagebreak"></p>
+<p></div><div class="pagebreak"></p>
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0327/09.jpg" /></p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0327/09.jpg" /></p>
 
-<p dir="rtl">فيل واحد يشرب الماء مع الأسد.</p>
+<p>فيل واحد يشرب الماء مع الأسد.</p>
 
 <div class="pagenum">8</div>
-<p dir="rtl"></div><div class="pagebreak"></p>
+<p></div><div class="pagebreak"></p>
 
-<p dir="rtl"><strong>Text:</strong> Zanele Buthelezi, Thembani Dladla, Clare Verbeek<br /><strong>Illustrations:</strong> Rob Owen<br /><strong>Translation:</strong> Maaouia Haj Mabrouk<br /><strong>Language:</strong> Arabic</p>
-<p dir="rtl">This story is brought to you by the <a href="https://global-asp.github.io/">Global African Storybook Project</a>, an effort to translate the stories of the <a href="http://africanstorybook.org/">African Storybook Project</a> into all the languages of the world.<p dir="rtl">You can view the original story on the ASP website <a href="http://my.africanstorybook.org/stories/counting-animals">here</a>
-<p dir="rtl"><a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
+<p><strong>Text:</strong> Zanele Buthelezi, Thembani Dladla, Clare Verbeek<br /><strong>Illustrations:</strong> Rob Owen<br /><strong>Translation:</strong> Maaouia Haj Mabrouk<br /><strong>Language:</strong> Arabic</p>
+<p>This story is brought to you by the <a href="https://global-asp.github.io/">Global African Storybook Project</a>, an effort to translate the stories of the <a href="http://africanstorybook.org/">African Storybook Project</a> into all the languages of the world.<p>You can view the original story on the ASP website <a href="http://my.africanstorybook.org/stories/counting-animals">here</a>
+<p><a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </p></p></p>
 
 
