--- a/stories/pa/0243_ਦਾਦੀ-ਦੇ-ਨਾਲ-ਛੁੱਟੀਆਂ.html
+++ b/stories/pa/0243_ਦਾਦੀ-ਦੇ-ਨਾਲ-ਛੁੱਟੀਆਂ.html
@@ -77,14 +77,14 @@ Violet Otieno<br>ਪੰਜਾਬੀ</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/06.jpg" /></p>
 
-<p>ਪਿਤਾ ਜੀ ਨੇ ਉਡੋਨਗੋ ਅਤੇ ਅਪੀੳ ਨੂੰ ਜਗਾਇਆ ਜਦ ਉਹ ਪਿੰਡ ਵਿੱਚ ਪਹੁੰਚ ਗਏ। ਉਹਨਾਂ ਨੂੰ ਆਪਣੀ ਦਾਦੀ, ਨਯਾਰ-ਕੰਨਯਾਦਾ, ਇੱਕ ਰੁੱਖ ਹੇਠ ਮੈਟ ਤੇ ਆਰਾਮ ਕਰਦੀ ਮਿਲੀ। ਨਯਾਰ-ਕੰਨਯਾਦਾ ਦਾ ਲੂੳ ਵਿੱਚ ਮਤਲਬ ਹੈ ‘ਕੰਨਯਾਦਾ ਦੇ ਲੋਕਾਂ ਦੀ ਧੀ’। ਉਹ ਇੱਕ ਤਾਕਤਵਰ ਅਤੇ ਸੁੰਦਰ ਔਰਤ ਸੀ।</p>
+<p>ਪਿਤਾ ਜੀ ਨੇ ਉਡੋਨਗੋ ਅਤੇ ਅਪੀੳ ਨੂੰ ਜਗਾਇਆ ਜਦ ਉਹ ਪਿੰਡ ਵਿੱਚ ਪਹੁੰਚ ਗਏ। ਉਹਨਾਂ ਨੂੰ ਆਪਣੀ ਦਾਦੀ, ਨਯਾਰ-ਕੰਨਯਾਦਾ, ਇੱਕ ਰੁੱਖ ਹੇਠ ਮੈਟ ਤੇ ਆਰਾਮ ਕਰਦੀ ਮਿਲੀ। ਨਯਾਰ-ਕੰਨਯਾਦਾ ਦਾ ਲੂੳ ਵਿੱਚ ਮਤਲਬ ਹੈ “ਕੰਨਯਾਦਾ ਦੇ ਲੋਕਾਂ ਦੀ ਧੀ”। ਉਹ ਇੱਕ ਤਾਕਤਵਰ ਅਤੇ ਸੁੰਦਰ ਔਰਤ ਸੀ।</p>
 
 <div class="pagenum">5</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/07.jpg" /></p>
 
-<p>ਨਯਾਰ-ਕੰਨਯਾਦਾ ਨੇ ਉਹਨਾਂ ਦਾ ਘਰ ਵਿੱਚ ਸਵਾਗਤ ਕੀਤਾ ਅਤੇ ਖੁਸ਼ੀ ਨਾਲ ਗਾਉਂਦੀ ਕਮਰੇ ਦੇ ਆਲੇ-ਦੁਆਲੇ ਨੱਚੀ। ਉਸ ਦੇ ਪੋਤਾ-ਪੋਤੀ ਉਸ ਨੂੰ ਸ਼ਹਿਰ ਤੋਂ ਲਿਆਂਦੇ ਤੋਹਫ਼ੇ ਦੇਣ ਲਈ ਉਤਸੁਕ ਸਨ। “ਪਹਿਲਾਂ ਮੇਰਾ ਤੋਹਫ਼ਾ ਖੋਲ੍ਹੋ,” ਉਡੋਨਗੋ ਨੇ ਕਿਹਾ । “ਨਹੀਂ,ਪਹਿਲਾਂ ਮੇਰਾ!” ਅਪੀੳ ਨੇ ਕਿਹਾ ।</p>
+<p>ਨਯਾਰ-ਕੰਨਯਾਦਾ ਨੇ ਉਹਨਾਂ ਦਾ ਘਰ ਵਿੱਚ ਸਵਾਗਤ ਕੀਤਾ ਅਤੇ ਖੁਸ਼ੀ ਨਾਲ ਗਾਉਂਦੀ ਕਮਰੇ ਦੇ ਆਲੇ-ਦੁਆਲੇ ਨੱਚੀ। ਉਸ ਦੇ ਪੋਤਾ-ਪੋਤੀ ਉਸ ਨੂੰ ਸ਼ਹਿਰ ਤੋਂ ਲਿਆਂਦੇ ਤੋਹਫ਼ੇ ਦੇਣ ਲਈ ਉਤਸੁਕ ਸਨ। “ਪਹਿਲਾਂ ਮੇਰਾ ਤੋਹਫ਼ਾ ਖੋਲ੍ਹੋ,” ਉਡੋਨਗੋ ਨੇ ਕਿਹਾ । “ਨਹੀਂ, ਪਹਿਲਾਂ ਮੇਰਾ!” ਅਪੀੳ ਨੇ ਕਿਹਾ ।</p>
 
 <div class="pagenum">6</div>
 <p></div><div class="pagebreak"></p>
