--- a/stories/pa/0243_ਦਾਦੀ-ਦੇ-ਨਾਲ-ਛੁੱਟੀਆਂ_slides.html
+++ b/stories/pa/0243_ਦਾਦੀ-ਦੇ-ਨਾਲ-ਛੁੱਟੀਆਂ_slides.html
@@ -133,7 +133,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/06.jpg" /></p>
-<p>ਪਿਤਾ ਜੀ ਨੇ ਉਡੋਨਗੋ ਅਤੇ ਅਪੀੳ ਨੂੰ ਜਗਾਇਆ ਜਦ ਉਹ ਪਿੰਡ ਵਿੱਚ ਪਹੁੰਚ ਗਏ। ਉਹਨਾਂ ਨੂੰ ਆਪਣੀ ਦਾਦੀ, ਨਯਾਰ-ਕੰਨਯਾਦਾ, ਇੱਕ ਰੁੱਖ ਹੇਠ ਮੈਟ ਤੇ ਆਰਾਮ ਕਰਦੀ ਮਿਲੀ। ਨਯਾਰ-ਕੰਨਯਾਦਾ ਦਾ ਲੂੳ ਵਿੱਚ ਮਤਲਬ ਹੈ 'ਕੰਨਯਾਦਾ ਦੇ ਲੋਕਾਂ ਦੀ ਧੀ'। ਉਹ ਇੱਕ ਤਾਕਤਵਰ ਅਤੇ ਸੁੰਦਰ ਔਰਤ ਸੀ।</p>
+<p>ਪਿਤਾ ਜੀ ਨੇ ਉਡੋਨਗੋ ਅਤੇ ਅਪੀੳ ਨੂੰ ਜਗਾਇਆ ਜਦ ਉਹ ਪਿੰਡ ਵਿੱਚ ਪਹੁੰਚ ਗਏ। ਉਹਨਾਂ ਨੂੰ ਆਪਣੀ ਦਾਦੀ, ਨਯਾਰ-ਕੰਨਯਾਦਾ, ਇੱਕ ਰੁੱਖ ਹੇਠ ਮੈਟ ਤੇ ਆਰਾਮ ਕਰਦੀ ਮਿਲੀ। ਨਯਾਰ-ਕੰਨਯਾਦਾ ਦਾ ਲੂੳ ਵਿੱਚ ਮਤਲਬ ਹੈ &quot;ਕੰਨਯਾਦਾ ਦੇ ਲੋਕਾਂ ਦੀ ਧੀ&quot;। ਉਹ ਇੱਕ ਤਾਕਤਵਰ ਅਤੇ ਸੁੰਦਰ ਔਰਤ ਸੀ।</p>
 <center>
 <strong>5</strong>
 </center>
@@ -142,7 +142,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/07.jpg" /></p>
-<p>ਨਯਾਰ-ਕੰਨਯਾਦਾ ਨੇ ਉਹਨਾਂ ਦਾ ਘਰ ਵਿੱਚ ਸਵਾਗਤ ਕੀਤਾ ਅਤੇ ਖੁਸ਼ੀ ਨਾਲ ਗਾਉਂਦੀ ਕਮਰੇ ਦੇ ਆਲੇ-ਦੁਆਲੇ ਨੱਚੀ। ਉਸ ਦੇ ਪੋਤਾ-ਪੋਤੀ ਉਸ ਨੂੰ ਸ਼ਹਿਰ ਤੋਂ ਲਿਆਂਦੇ ਤੋਹਫ਼ੇ ਦੇਣ ਲਈ ਉਤਸੁਕ ਸਨ। &quot;ਪਹਿਲਾਂ ਮੇਰਾ ਤੋਹਫ਼ਾ ਖੋਲ੍ਹੋ,&quot; ਉਡੋਨਗੋ ਨੇ ਕਿਹਾ । “ਨਹੀਂ,ਪਹਿਲਾਂ ਮੇਰਾ!” ਅਪੀੳ ਨੇ ਕਿਹਾ ।</p>
+<p>ਨਯਾਰ-ਕੰਨਯਾਦਾ ਨੇ ਉਹਨਾਂ ਦਾ ਘਰ ਵਿੱਚ ਸਵਾਗਤ ਕੀਤਾ ਅਤੇ ਖੁਸ਼ੀ ਨਾਲ ਗਾਉਂਦੀ ਕਮਰੇ ਦੇ ਆਲੇ-ਦੁਆਲੇ ਨੱਚੀ। ਉਸ ਦੇ ਪੋਤਾ-ਪੋਤੀ ਉਸ ਨੂੰ ਸ਼ਹਿਰ ਤੋਂ ਲਿਆਂਦੇ ਤੋਹਫ਼ੇ ਦੇਣ ਲਈ ਉਤਸੁਕ ਸਨ। &quot;ਪਹਿਲਾਂ ਮੇਰਾ ਤੋਹਫ਼ਾ ਖੋਲ੍ਹੋ,&quot; ਉਡੋਨਗੋ ਨੇ ਕਿਹਾ । “ਨਹੀਂ, ਪਹਿਲਾਂ ਮੇਰਾ!” ਅਪੀੳ ਨੇ ਕਿਹਾ ।</p>
 <center>
 <strong>6</strong>
 </center>
